Run spell check

--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -31,11 +31,11 @@ Since the catalyst is in a different phase, it can be easily separated from the 
 This makes the catalyst recyclable and economically attractive for industrial processes \parencite{FECHETE20122}.
 
 There are a few key parameters to take into account when comparing the efficiency and performance between different catalysts \parencite{Boudart1995, ZHANG2019, WACHS2022}.
-The \textit{turnover frequency} (TOF) refers to the number of reactant molecules catalyzed into product molecules by a single catalyst site per unit of time, expressed in units of moles of product formed per second per mole of active catalyst site, it is an indicator of the catalyst activity.
+The \textit{turnover frequency} (TOF) refers to the number of reactant molecules catalysed into product molecules by a single catalyst site per unit of time, expressed in units of moles of product formed per second per mole of active catalyst site, it is an indicator of the catalyst activity.
 The \textit{turnover number} (TON) refers to the total number of reactant molecules that are converted into product molecules by a single catalyst site over the entire course of a reaction, and provides a measure of the catalyst's overall \textit{activity} and \textit{stability} before deactivation.
-Finally, the \textit{selectivity} of the catalyst refers to its ability to favor the formation of a specific product or products over undesired products.
+Finally, the \textit{selectivity} of the catalyst refers to its ability to favour the formation of a specific product or products over undesired products.
 
-Developing a catalyst that simultaneously fulfills all the desired requirements of high stability, selectivity, and activity for every chemical reaction remains an ongoing scientific pursuit \parencite{Hagen2016}.
+Developing a catalyst that simultaneously fulfils all the desired requirements of high stability, selectivity, and activity for every chemical reaction remains an ongoing scientific pursuit \parencite{Hagen2016}.
 
 The Sabatier principle, at the origin of the Nobel price of chemistry of 1912 \parencite{Che2013}, states that when a heterogeneous catalyst is used, there exists an optimum catalyst binding energy for the reactant on the catalyst surface.
 On one hand, if the catalyst binding energy is too weak, the reactant molecules do not adsorb strongly enough on the catalyst, leading to low reaction rates.
@@ -54,9 +54,9 @@ Moreover, if the adsorption is too strong, the product of the reaction is not ab
 \end{figure}
 
 In a founding study in \cite*{Langmuir1922}, Langmuir detailed the possible mechanisms of actions for heterogeneous catalysis.
-When studying bimolecular reactions, the Langmuir–Hinshelwood and Elley-Rideal mechanisms are two main mechanisms of interest \parencite{catal12101134}.
+When studying bi-molecular reactions, the Langmuir–Hinshelwood and Elley-Rideal mechanisms are two main mechanisms of interest \parencite{catal12101134}.
 In the Langmuir–Hinshelwood mechanism, both reactants are adsorbed in nearby sites at the surface of the catalyst, and react on the surface to form the product which is subsequently desorbed from the surface \parencite{Prins2018, ROSS2019}.
-In the Eley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{rideal_1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
+In the Elley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{rideal_1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
 
 % In the third mechanism, an atom from the surface layer of the catalyst reacts with an adsorbed reactant, which creates a vacancy in his original position on the surface when the products is desorbed.
 % The vacancy is then replaced by an atom that comes from from the bulk or the gas phase \parencite{MARS1954, Doornkamp2000}.
@@ -66,19 +66,19 @@ The Langmuir–Hinshelwood mechanism seems to be generally preferred, the bondin
 
 The complete heterogeneous catalytic reaction consists in a series of elementary steps such as reactant dissociation, adsorption, surface diffusion, surface chemical reactions, and desorption that are nowadays extensively studied \textit{via} different theoretical computing methods such as density-functional theory (DFT - \cite{Reuter2004, Molenbroek2009, Yawei2015, Gaggioli2019, Chatelier2020}) or more recently machine learning \parencite{Kitchin2018, Schlexer2019, Anstine2023} as a function of the reaction parameters.
 
-Due to the increase of interest in the field of catalysis, synchrotron techniques have been developped to study the reaction in \textit{operando} conditions, meaning that the reaction happens while being observed \parencite{Meirer2018}.
+Due to the increase of interest in the field of catalysis, synchrotron techniques have been developed to study the reaction in \textit{operando} conditions, meaning that the reaction happens while being observed \parencite{Meirer2018}.
 The first step towards the use of these experimental methods is to understand what specific signatures on the working catalyst can be identified using an x-ray probe.
 % (sec. \ref{sec:XRIntMatter}, tab. \ref{tab:techniques}).
 
 \subsection{Active sites in heterogeneous catalysis}
 
-Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximize the surface area to volume ratio, increasing the number of available active sites for catalysis \parencite{Vogt2022}.
+Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximise the surface area to volume ratio, increasing the number of available active sites for catalysis \parencite{Vogt2022}.
 This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{CHE1989, Molenbroek2009, vanSanten2010, Schauermann2013}.
 As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{HECK2001}.
 The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{WINTERBOTTOM1967, Boukouvala2021}.
 The orientation and structure of each facet on the nanoparticle surface can be described by its Miller (hkl) indices.
-Between facets are the nanoparticle edges and corners, notorious for being very favorable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
-\cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density dunctional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
+Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
+\cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density functional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
 The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
 \textcolor{Important}{CalleVallejo2023?}
 
@@ -90,7 +90,7 @@ where \textit{cn} is the usual coordination number.%, \textit{i.e.} the number o
 
 However, strong adsorption sites are not always the most active sites, following the Sabatier principle, it is possible that if the adsorption is too strong, there is no subsequent desorption of the reaction product \parencite{Nilsson2005, Jiang2009}.
 
-The activity of single facets can also be studied with \textit{single crystals}, much larger crystals, synthetized in a way so that their macroscopic surface consists of a single crystallographic plane (fig. \ref{fig:Samples}).
+The activity of single facets can also be studied with \textit{single crystals}, much larger crystals, synthesised in a way so that their macroscopic surface consists of a single crystallographic plane (fig. \ref{fig:Samples}).
 
 \begin{figure}[!htb]
     \centering
