--- a/Sections/2_Theory_Models/CrystalStructures.tex
+++ b/Sections/2_Theory_Models/CrystalStructures.tex
@@ -2,7 +2,7 @@
 
 \subsection{Platinum}
 
-Platinum crystallizes in a face-centered cubic structure with a lattice parameter $|\vec{a}|$ equal to \qty{3.94}{\angstrom} at room temperature.
+Platinum crystallises in a face-centred cubic structure with a lattice parameter $|\vec{a}|$ equal to \qty{3.94}{\angstrom} at room temperature.
 Its structure was first presented in sec. \ref{sec:ScatCrystal} to introduce the notions of crystals.
 Bragg's law tells us that diffraction occurs when x-rays are scattered at discrete angles with the crystal that depend on the crystallographic planes present on the sample.
 It can be interesting to study those crystallographic planes with techniques such as surface x-ray diffraction to reveal direction-dependent effects from the crystal.
@@ -17,7 +17,7 @@ The shortest distance between the atoms on the [001] and [111] surfaces becomes 
 The atoms on the [001] plane follow a cubic structure, whereas the atoms on the [111] plane follow a hexagonal structure, therefore the angle $\gamma$ between the two in-plane vectors is equal to \ang{90} for the [100] surface and to \ang{120} for the [111] surface.
 
 The $\vec{c}_{[111]}$ vector is also introduced to describe the distance between three successive Pt [111] planes (fig. \ref{fig:Cubic100Hex111}).
-The arrangement of the Pt atoms on the [111] surface is reproduced exactly every three consecutive planes, and is decribed by the ABC letters (respectively the blue, green and orange atoms in fig. \ref{fig:Cubic100Hex111} - b).
+The arrangement of the Pt atoms on the [111] surface is reproduced exactly every three consecutive planes, and is described by the ABC letters (respectively the blue, green and orange atoms in fig. \ref{fig:Cubic100Hex111} - b).
 For example, a perfect arrangement of six consecutive [111] planes will be named ABCABC.
 The \textit{out-of-plane} vector $\vec{c}_{[111]}$ is equal to $3a/\sqrt{3}$.
 The different structures are resumed in tab. \ref{tab:PtStructures}.
@@ -27,9 +27,9 @@ The different structures are resumed in tab. \ref{tab:PtStructures}.
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/100.pdf}
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/introduction/111.pdf}
     \caption{
-        Face-centered cubic unit cell of Pt with two [001] crystallographic planes drawn in green at z=0 and z=1 (a).
+        Face-centred cubic unit cell of Pt with two [001] crystallographic planes drawn in green at z=0 and z=1 (a).
         %The $\vec{a}$, $\vec{b}$, and $\vec{c}$ vectors are used to decribe the FCC cubic structure, the $\vec{a}_s$ and $\vec{b}_s$ in-plane vectors separated by \ang{90} and of magnitude \qty{2.78}{\angstrom} can also be used specifically to describe the structure of the [001] planes.
-        Face-centered cubic unit cell of Pt with $[111]$ crystallographic plane drawn in green (b).
+        Face-centred cubic unit cell of Pt with $[111]$ crystallographic plane drawn in green (b).
         %The arrangement of the Pt atoms on the $[111]$ crystal planes is hexagonal, which leads to a new definition of the surface unit cell with the $\vec{a}$ and $\vec{b}$ in-plane vectors separated by \ang{120} of magnitude \qty{2.78}{\angstrom}, and $\vec{c}$ perpendicular to the $[111]$ plane of magnitude \qty{6.81}{\angstrom}.
         There are three $[111]$ planes spanned by the magnitude of $\vec{c}$ (blue, red and green on the figure).
     }
