--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -13,10 +13,10 @@
 After having shown that the Pt particles epitaxied on alumina are stable under different atmospheres at \qty{300}{\degreeCelsius}, \qty{500}{\degreeCelsius} and \qty{600}{\degreeCelsius}, the oxidation of ammonia was measured using BCDI starting at \qty{300}{\degreeCelsius}.
 
 The same sample, experimental setup, type of measurements and phase retrieval algorithms were used as detailed in the previous section for the temperature ramp.
-Two well faceted nanoparticles were successully measured and reconstructed at room temperature (fig. \ref{fig:IsanagiSusanooFacets}).
+Two well faceted nanoparticles were successfully measured and reconstructed at room temperature (fig. \ref{fig:IsanagiSusanooFacets}).
 Isanagi exhibits a round shape with many low index facets, \qty{40}{\percent} of its surface covered by \{113\} facets, \qty{40}{\percent} by \{111\} facets, \qty{40}{\percent} by \{110\} facets, and \qty{40}{\percent} by \{100\} facets.
 The particle is at the largest \qty{300}{\nm} wide.
-On the contraty, Susanoo exhibits a more rectangular shape without any \{113\} facets, \qty{40}{\percent} of its surface is covered by \{111\} facets, \qty{40}{\percent} by \{110\} facets, and \qty{40}{\percent} by \{100\} facets.
+On the contrary, Susanoo exhibits a more rectangular shape without any \{113\} facets, \qty{40}{\percent} of its surface is covered by \{111\} facets, \qty{40}{\percent} by \{110\} facets, and \qty{40}{\percent} by \{100\} facets.
 The particle is at the largest \qty{800}{\nm} wide.
 
 Together with the Amaterasu nanoparticle, we have measured three nanoparticles that have a different size, shape and facets exhibited on the surface.
@@ -67,14 +67,14 @@ A 3D view of the reconstructed nanoparticles is presented in \ref{sec:3DAmmoniaO
 After having successfully reconstructed the Pt nanoparticles, the facets at their surface were retrieved using the \textit{FacetAnalyzer} script written for \textit{Paraview} (sec. \ref{sec:FacetAnalysis}).
 No surface
 
-\subsection{Mass spectromety results}
+\subsection{Mass spectrometry results}
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/figures/homo_strain_vs_condition.png}
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/figures/homo_strain_vs_condition_no_25.png}
     \caption{
-        Evolution of the homogeneous strain computed from the 3D Bragg peak center of mass.
+        Evolution of the homogeneous strain computed from the 3D Bragg peak centre of mass.
     }
     \label{fig:AmaterasuStrainSlices}
 \end{figure}
