--- a/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
+++ b/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
@@ -1,4 +1,4 @@
-\section{Measuring the average and ensemble behaviour of Pt nanoparticles}
+\section{Measuring the average behaviour of Pt nanoparticles}
 
 % Compare shape with wulff construction and other measurements
 % Get particle average size from epitaxy
@@ -8,18 +8,19 @@
 % Double -110 facet, twin boundaries maybe ?
 
 We first intend to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
-By having a low incidence angle, the incident beam recovers the whole sample surface, the scattered beam being then proportionnal to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013}.
+At grazing incidences the beam footprint extends across the whole sample length, the scattered beam being then proportional to the ensemble behaviour of the nanoparticles \parencite{Nolte2008, Hejral2013}.
+SXRD can be applied to high gas pressures due to the X-rays’ high penetration in gasses.
 
 The goal of this experiment is two-fold.
 First, the nanoparticles epitaxy must be ensured to be stable at different temperatures and atmospheres, before measuring a single nanoparticle with Bragg coherent diffraction imaging, where the beam is reduced to micrometric size.
 Secondly, the average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods (CTR) in directions perpendicular to the expected facets on the nanoparticle surface.
 Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{WINTERBOTTOM1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\}-type facets, and a [111] orientation perpendicular to the substrate.
 
-We have seen in sec. \ref{sec:SXRD} that truncated surfaces such as facets give rise to crystal truncation rods in the reciprocal space, the intensity of which is proportionnal to the size, roughness and strain of the related surface, as a function of the scattering vector.
+We have seen in sec. \ref{sec:SXRD} that truncated surfaces such as facets give rise to crystal truncation rods in the reciprocal space, the intensity of which is proportional to the size, roughness and strain of the related surface, as a function of the scattering vector.
 By having the incident beam covering all of the particles, the CTR signal in e.g. the [111] direction will be the sum of the contribution from the [111] facet of every nanoparticle on the sample (as well as their [$\bar{1}\bar{1}\bar{1}$] facets).
-Therefore, phenomena inducing structural change such as particle refaceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
+Therefore, phenomena inducing structural change such as particle re-faceting/reshaping at a given condition are expected to be visible by an evolution of the different CTR.
 
-To have a more important scattered intensity, a slightly different sample was used from the sample used in BCDI, with the only difference being a surface homogenously covered with Pt particles.
+To have a more important scattered intensity, a slightly different sample was used from the sample used in BCDI, with the only difference being a surface homogeneously covered with Pt particles.
 
 \subsection{Experimental setup for SXRD experiments in the vertical geometry}\label{sec:SXRDSetupV}
 
@@ -29,13 +30,13 @@ No cleaning process was applied to this sample that has the same history as the 
 The temperature in the MED end-station is of about \qty{25}{\degreeCelsius}.
 
 The incident beam was fixed to \ang{0.3} with the angle $\mu$, so that the beam recovers the entire sample surface.
-In-plane measurements were perfomed by rotating the in-plane sample angle $\omega$ together with the in-plane detector angle $\delta$.
+In-plane measurements were performed by rotating the in-plane sample angle $\omega$ together with the in-plane detector angle $\delta$.
 Out-of-plane measurements were performed by rotating the in-plane sample angle $\omega$ together with the in-plane and out-of-plane detector angles $\delta$ and $\gamma$, the incoming angle $\mu$ must stay at a low value to keep the grazing incidence of the beam as detailed in sec. \ref{sec:DataCollectionSXRD}.
 
-The alignement of the beam was performed with the direct beam (all angles at \ang{0})
+The alignment of the beam was performed with the direct beam (all angles at \ang{0})
 % to ensure that the sample surface is parallel to the direct beam at $\mu=0$ when $\omega = \ang{0}$ and when $\omega = \ang{90}$.
 First, to place the sample in the beam, its position was gradually increased in the direction perpendicular to the sample plane while recording the intensity of the direct beam.
-The sample was then moved to the position at which the intensity of the direct beam was equal to half of its intensity without the sample in the beam path, so that when incresing the incidence angle to \ang{0.3}, the beam covers the entire sample surface.
+The sample was then moved to the position at which the intensity of the direct beam was equal to half of its intensity without the sample in the beam path, so that when increasing the incidence angle to \ang{0.3}, the beam covers the entire sample surface.
 Secondly, any possible tilt of the sample surface was corrected by recording the intensity of the \textit{reflected} beam as a function of the $u$ (when $\omega=\ang{0}$) or $v$ (when $\omega=\ang{90}$) angles (fig. \ref{fig:Diffractometer}).
 
 % (all angles at \ang{0}), used also to calibrate the detector and to find the position of the central pixel (pixel on which the direct beam hits the detector).
@@ -46,7 +47,7 @@ Secondly, any possible tilt of the sample surface was corrected by recording the
 
 This experiment proved to be difficult to realise experimentally.
 The graphite layer used to heat the sample is covered by a Boron Nitride solid surface with 4 holes (fig. \ref{fig:SampleHolder}), two holes are used with small screws to fix the sample on top of the heater, while the two others are used to fix the heater to the sample holder.
-Despite an extra layer of Boron Nitride that was applied around these screws and holes, the high temperature and highly oxidating atmosphere managed twice to corrode the conducting screws which resulted in a contact loss with the heater, thus a change of heater and realignment of the sample surface.
+Despite an extra layer of Boron Nitride that was applied around these screws and holes, the high temperature and highly oxidising atmosphere managed twice to corrode the conducting screws which resulted in a contact loss with the heater, thus a change of heater and realignment of the sample surface.
 However, most of the experimental plan was still carried out, lacking only in-plane measurements at \qty{600}{\degreeCelsius} under \qty{8}{\ml\per\min} of oxygen and \qty{1}{\ml\per\min} of ammonia (tab. \ref{tab:ConditionsNanoparticles}), due to a lack of experimental time.
 
 \subsection{Epitaxial relationship between Pt and $\alpha$-\ce{Al_2O_3}}
@@ -61,7 +62,7 @@ Lattice strain in diffraction is usually defined as the difference between the r
     \label{eq:StrainDiffraction}
 \end{equation}
 
-In this case, the misfit strain can be computed using eq. \ref{eq:MisfitStrain}, the reference lattice parameter is equaled to the in-plane lattice parameter of sapphire.
+In this case, the misfit strain can be computed using eq. \ref{eq:MisfitStrain}, the reference lattice parameter is equalled to the in-plane lattice parameter of sapphire.
 
 \begin{minipage}{0.55\linewidth}
     \centering
@@ -83,7 +84,7 @@ In this case, the misfit strain can be computed using eq. \ref{eq:MisfitStrain},
 
 To ensure that the \ce{Al_2O_3} supported particles have a stable epitaxy relation with the substrate as a function of the different atmospheres, the scattering intensity in the sample plane, perpendicular to the [111] direction, was measured.
 The signal of six (220)-type Bragg peaks is expected to be measured, corresponding to the six [$\bar{1}10$]-type planes perpendicular to the [111] direction (fig. \ref{fig:StereoTop}).
-The h, k, and l Miller indices must have the same parity for the Bragg reflection to be allowed for face-centered cubic crystals.
+The h, k, and l Miller indices must have the same parity for the Bragg reflection to be allowed for face-centred cubic crystals.
 
 The scattered intensity was measured by rotating the sample in-plane angle ($\omega$ - fig. \ref{fig:Diffractometer}) from \ang{0} to \ang{360}, while the in-plane detector angle ($\delta$) was kept to a fixed angular value.
 Multiple $\omega$ scans were performed while changing the value of $\delta$ from \ang{15} to \ang{30} so as to map an area of the reciprocal space.
@@ -98,7 +99,7 @@ From the average position of these peaks in q-space is computed the in-plane lat
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/map/qxqyqz_38_40.pdf}
     \caption{
         In-plane reciprocal space map at room temperature.
-        Starting from the center of the map are 6 peaks corresponding to six (1$\bar{2}$0)-type Bragg peak from the substrate, thin circular powder signal for the $(111)$, $(200)$ and $(220)$ Bragg peaks, and 6 isolated $(220)$ Bragg peaks.
+        Starting from the centre of the map are 6 peaks corresponding to six (1$\bar{2}$0)-type Bragg peak from the substrate, thin circular powder signal for the $(111)$, $(200)$ and $(220)$ Bragg peaks, and 6 isolated $(220)$ Bragg peaks.
     }
     \label{fig:QxQyMap}
 \end{figure}
@@ -173,14 +174,14 @@ There is no increase of the powder signal corresponding to the (220) Bragg peak 
 
 No (200) or (111)-type Bragg peaks have been seen to appear during the different measurements (figures visible in the appendix \ref{fig:Epitaxy200}, and \ref{fig:Epitaxy111}).
 Moreover, there is no variation of the powder signal for the (200) Bragg peak, there is a slight decrease of the powder signal for the (111) Bragg peak which cannot be observed on the other powder signals which could be linked to instrumental effects.
-Additionnal powder diffractograms are visible in the appendix \ref{fig:PowderNanoparticles}, on which it is also clear that the powder and nanoparticles do not have the same in-plane lattice parameter (two peaks near the expected (220) Bragg peak), and that there is no variation of the in-plane lattice parameter of the nanoparticles as a function of the atmosphere.
+Additional powder diffractograms are visible in the appendix \ref{fig:PowderNanoparticles}, on which it is also clear that the powder and nanoparticles do not have the same in-plane lattice parameter (two peaks near the expected (220) Bragg peak), and that there is no variation of the in-plane lattice parameter of the nanoparticles as a function of the atmosphere.
 
 Most importantly, these measurements confirm that the particles are stable on the substrate as different temperatures and atmospheres and prove that surface x-ray diffraction measurements with grazing incidence can yield information on the average nanoparticle behaviour.
 Bragg peaks originating from the \ce{Al_2O_3} substrate together with very important powder signals prevented us from a more precise analysis of the facet signal.
 
 The size distribution of the particles could have been measured before the experiment with other techniques such as TEM \parencite{Hejral2013}, to simulate an average diffraction pattern and compare its intensity with the experimental data.
 
-Reflectivity measurements have been carried out as during the experiment to extract additionnal quantitative information such as the percentage of the surface covered by the nanoparticles from the values of the fitted electronic density, or the average height of the platinum nanoparticles.
+Reflectivity measurements have been carried out as during the experiment to extract additional quantitative information such as the percentage of the surface covered by the nanoparticles from the values of the fitted electronic density, or the average height of the platinum nanoparticles.
 However, repeated loss of contact with the heater resulted in experimental difficulties to keep the sample surface perfectly aligned and prevented us from measuring high quality reflectivity curves.
 
 \subsection{Crystal truncation rods}
@@ -241,21 +242,21 @@ This powder signal occupies a large area in the $\vec{q}_x$ direction, is almost
         The three black dotted line are respectively a projection in the $(\vec{q}_x, \vec{q}_y)$ plane of the $[\bar{1}11]$, $[\bar{1}10]$ and $[010]$ directions.
         The red dotted line correspond to a parasite signal linked to the use of attenuators when the detector records the intensity of the Bragg peak.
         b-c-d) Slices in the $(\vec{q}_y, \vec{q}_z)$ plane after rotation in the $(\vec{q}_x, \vec{q}_y)$ plane to highlight the presence of crystal truncation rods in different directions.
-        The interval delimited by the vertical white dottel lines is then used for the qualitative analysis of the intensity of those rods.
+        The interval delimited by the vertical white dotted lines is then used for the qualitative analysis of the intensity of those rods.
     }
     \label{fig:FacetMaps}
 \end{figure}
 
 The identification of the crystallographic direction corresponding to the different rods present around the Bragg peak was performed thanks to the stereographic projection perpendicular to the [111] crystallographic orientation presented in fig. \ref{fig:StereoTop} ([111] direction in classical unit cell, here along $\vec{q}_z$).
 Each dot represents a crystallographic direction, \textit{e.g.} [100], [110], etc.
-The distance between the dots and the center is a function of the angle with the [111] direction, whereas their angular distribution corresponds to the planar angle of the component perpendicular to the [111] direction.
+The distance between the dots and the centre is a function of the angle with the [111] direction, whereas their angular distribution corresponds to the planar angle of the component perpendicular to the [111] direction.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/stereographic_projection_top.pdf}
     \caption{
-        Stereographic projection perpendicular to $[111]$ crystallographic orientation (for a face-centered cubic lattice).
-        The circles describe the angle with the $[111]$ direction from \ang{0} (center) to \ang{90} (outer-ring).
+        Stereographic projection perpendicular to $[111]$ crystallographic orientation (for a face-centred cubic lattice).
+        The circles describe the angle with the $[111]$ direction from \ang{0} (centre) to \ang{90} (outer-ring).
     }
     \label{fig:StereoTop}
 \end{figure}
@@ -299,7 +300,7 @@ The gradual increase of the oxygen partial pressure in the cell is accompanied b
 This result could be explained by a surface catalytic process route involving the reshaping of the particles with a transition towards particles exhibiting mostly (111)-type and (100)-type facets.
 A progressive roughening of the particles could explain the loss of intensity from the \{110\} rods but not the increase of intensity of the [$1\bar{1}1$] rod.
 The catalytic activity of the particles was recorded \textit{via} the use of a mass spectrometer and shows the production of nitrogen, nitrous oxide and nitrogen oxide (fig. \ref{fig:RGASXRDNanoparticlesComparison}), proving the activity of the catalyst.
-At \qty{600}{\degreeCelsius}, the production of \nitrogen is favoured at lower oxygen partial pressures in comparison with \nitrogendioxide and \nitricoxide.
+At \qty{600}{\degreeCelsius}, the production of \ce{N_2} is favoured at lower oxygen partial pressures in comparison with \nitrogendioxide and \ce{NO}.
 The original mass spectrometer signal as a function of time can be seen in the appendix \ref{sec:RGANanoparticlesNonPatterned}.
 
 \begin{figure}[!htb]
@@ -309,12 +310,12 @@ The original mass spectrometer signal as a function of time can be seen in the a
         Evolution of reaction product partial pressures  recorded from a leak in the reactor output as detailed in sec. \ref{sec:XCAT}.
         The product pressure shown for each condition were computed as the mean product pressure during \qty{1}{\minute} at the end of each condition.
         The product pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
-        Higher oxygen pressure and temperature favour the production of \nitrousoxide and \nitricoxide over \nitrogen.
+        Higher oxygen pressure and temperature favour the production of \ce{N_2O} and \ce{NO} over \ce{N_2}.
     }
     \label{fig:RGASXRDNanoparticlesComparison}
 \end{figure}
 
-The same measurements were not repeated at a fixed condition which prevents us from knowing if the observed phenomena would have occured as a function of time under a fixed atmosphere.
+The same measurements were not repeated at a fixed condition which prevents us from knowing if the observed phenomena would have occurred as a function of time under a fixed atmosphere.
 Moreover, the reversibility of this effect and the formation of possible platinum oxides (\textit{via} large in-plane maps) could not be investigated from the lack of available experimental time.
 
 To be certain of the combined effect of ammonia and oxygen, the same experiment could be carried without ammonia at the same temperature and oxygen pressure.
