--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -17,4 +17,4 @@
 
 biased, can only measure stable structures
 
-different between both surfaces but same products in our rga, not at b07, due to the contribution of the sample sides ?
+different between both surfaces but same products in our RGA, not at b07, due to the contribution of the sample sides ?
