--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -4,7 +4,7 @@
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
 The experiment focused on measuring before and after the catalyst light off temperature, it was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward, but only for temperatures above the light off.
 
-Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \nitrogen) were associated to positive relaxation of the topmost layer, expansion; while oxidative species (such as NO and oxygen) were linked to negative relaxation, contraction.
+Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to positive relaxation of the topmost layer, expansion; while oxidative species (such as NO and oxygen) were linked to negative relaxation, contraction.
 This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model detailed in sec. \ref{sec:Catalysis}.
 It is therefore our intent to study if this modification in the relaxation is present only in the \ce{PtRh} alloy or if it has a more general value also on the constituent elements of the alloy such as Pt.
 Different relaxation state, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
@@ -15,8 +15,8 @@ The evolution of two single nanoparticles exhibiting different type of facets on
 The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt (100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
 In-plane reciprocal space maps were first carried out to probe for the existence of surface reconstruction from the adsorbance of reacting molecules, as well as for the growth of potential surface and bulk oxides on the catalyst surface.
 Crystal truncation rods were measured to probe for surface relaxation effects, and to assert the average roughness of the catalyst surface.
-Additionnal $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
-Reflectivity curves were also carried out to obtain complementary informations about the formation of new layers on the catalyst surface.
+Additional $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
+Reflectivity curves were also carried out to obtain complementary information about the formation of new layers on the catalyst surface.
 
 % introduce xps
 Finally, core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibility to strengthen the links between structure, surface moieties and reaction products.
@@ -25,14 +25,15 @@ For each combination of temperature and ammonia to oxygen ratio, the O1s, N1s, a
 The Fermi edge is also measured after each core level to be able to find the zero kinetic energy.
 
 The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature after the catalyst light-off.
-To make certain that any surface relaxation effects are related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to high oxygen atmopshere, at which the potential growth of surface oxides on the catalyst surface was monitored.
+Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements.
+To make certain that any surface relaxation effects are related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to high oxygen atmosphere, at which the potential growth of surface oxides on the catalyst surface was monitored.
 The following introduction of ammonia in the reactor enables us to probe the impact of potential existent surface oxides on the catalyst selectivity during the reaction, as well as their stability during reaction condition.
 Two different partial pressures of oxygen have been used with the same partial pressure of ammonia to probe the effect of the ammonia to oxygen ratio on the catalyst structure, surface species, and selectivity.
-Finally, only ammonia was kept in the reactor to be able to decorellate the effect of the presence of ammonia from the simulatenous presence of ammonia and oxygen.
+Finally, only ammonia was kept in the reactor to be able to de-correlate the effect of the presence of ammonia from the simultaneous presence of ammonia and oxygen.
 
-The sample was characterized under argon before and after the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
+The sample was characterised under argon before and after the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
 Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
-The total atmosphere is not anymore kept constant to \qty{500}{\milli\bar} by the use of Argon as an inert carrier gas between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\dioxygen / \ammonia) ratio.
+The total atmosphere is not anymore kept constant to \qty{500}{\milli\bar} by the use of Argon as an inert carrier gas between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
 The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
 
 The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
@@ -45,12 +46,12 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
     \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
     \midrule
     \midrule
-    \argon & \dioxygen & \ammonia &  & \argon & \dioxygen & \ammonia &  \\
+    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
     \midrule
     \midrule
     50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
     42 & 8 & 0 & 500 & 420 & 80 & 0 & Growth of surface oxides \\
-    41 & 8 & 1 & 500 & 410 & 80 & 10 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ammonia/\dioxygen) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    41 & 8 & 1 & 500 & 410 & 80 & 10 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
     48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 &  \\
     49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
     50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
@@ -70,12 +71,12 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
     \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
     \midrule
     \midrule
-    \argon & \dioxygen & \ammonia &  & \argon & \dioxygen & \ammonia &  \\
+    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
     \midrule
     \midrule
     50 & 0 & 0 & 1 & 1 & 0 & 0 & Catalyst state without reactants (unactive) \\
     42 & 8 & 0 & 8.8 & 0 & 8.8 & 0 & Growth of surface oxides \\
-    41 & 8 & 1 & 9.9 & 0 & 8.8 & 1.1 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ammonia/\dioxygen) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    41 & 8 & 1 & 9.9 & 0 & 8.8 & 1.1 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
     48.5 & 0.5 & 1 & 1.65 & 0 & 0.55 & 1.1 &  \\
     49 & 0 & 1 & 1.1 & 0 & 0 & 1.1 & Ammonia adsorption \\
     50 & 0 & 0 & 1 & 1 & 0 & 0 & Return to pristine state \\
@@ -90,21 +91,21 @@ The use of a residual gas analyser during \textit{in-situ} and \textit{operando}
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
 The surface x-ray diffraction experiment were performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
-The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accomodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of Argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
+The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of Argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
 Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
 To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
 The volume inside the XCAT reactor was increased by \textit{opening} the chamber (fig. \ref{fig:SampleSXRD}) while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
 The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
-The sample height was tuned to maximize the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
+The sample height was tuned to maximise the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
 The efficiency of the sputtering could be observed directly by a quick increase of the reactor pressure in the first minutes linked to the removal of surface impurities, followed by a progressive decrease of the reactor pressure from pumping.
-The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the efficiency of which could again be directly visualized by the increase of the reactor pressure.
+The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the efficiency of which could again be directly visualised by the increase of the reactor pressure.
 The same procedure was applied to both Pt (111) and Pt (100) surfaces.
 
 The experiment was performed at an energy of \qty{15}{\keV}.
-The alignement of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
+The alignment of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
 In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
 The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), allowing us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
-Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximize the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
+Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
 The sample plane was realigned at the beginning of each condition in the direct beam to make that the beam is always on the sample surface, the orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
 \begin{figure}[!htb]
@@ -123,11 +124,12 @@ The sample plane was realigned at the beginning of each condition in the direct 
 \subsection{Experimental setup for X-ray photoelectron spectroscopy} \label{sec:XPS111}
 
 The NAP-XPS experiment was performed at the B07 end station at the Diamond Light Source \parencite{Held2020}.
-The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarization vector.
+The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarisation vector.
 The cone aperture of the analyser has a diameter equal to \qty{0.3}{\mm}, which is slightly larger than the footprint of the beam on the sample at normal emission equal to \qty{0.2}{\mm}.
 Four different pumping stages protect the vacuum in the UHV section of the analyser from the endstation, that can reach a working pressure of \qty{100}{\milli\bar}.
 The ﬁrst two differential pumping stages each contain a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
-The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyzer, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
+The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyser, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
 
-The energy or the incident photons was chosen to optimized the photoelectron signal, as a compromise between electron transmission (which increases as a function of the photon energy) and excitation cross-sections (which decreases as a function of the photon energy), depending on the gas present in the reactor.
+The energy or the incident photons was chosen to optimised the photoelectron signal, as a compromise between electron transmission (which increases as a function of the photon energy) and excitation cross-sections (which decreases as a function of the photon energy), depending on the gas present in the reactor.
 Guidelines on how to choose the best instrumental settings are detailed in \parencite{Held2020}.
+The combined energy resolution of the beamline and analyser, while working in NAP conditions, ranged between 0.8 and 1.2 eV for a kinetic energy of 800 eV, pass energy of 20 eV, and photon energies from 870 to 1300 eV.
