--- a/references.bib
+++ b/references.bib
@@ -43,6 +43,33 @@ keywords = {Oxidation, Platinum, Atomic oxygen, Atom–solid interactions, Desor
 abstract = {The oxidation of Pt(111) by gas-phase oxygen atoms was investigated in ultrahigh vacuum using temperature programmed desorption (TPD), X-ray photoelectron spectroscopy (XPS), electron energy loss spectroscopy (ELS) and low energy electron diffraction (LEED). Atomic oxygen coverages as high as 2.9ML (monolayers) could be generated on Pt(111) using an atomic oxygen beam, and both the adsorption of oxygen atoms and the progression of surface oxygen phases with increasing atomic oxygen coverage are found to be relatively insensitive to the surface temperature over the range from 250 to 450K. The results show that oxidation involves the development of a chemisorbed layer for oxygen coverages up to about 0.75ML, and that the average binding energy of an oxygen atom chemisorbed on Pt(111) decreases significantly (∼100kJ/mol) with increasing oxygen coverage, in agreement with previous observations [D.H. Parker, M.E. Bartram, B.E. Koel, Surf. Sci. 217 (1989) 489, N.A. Saliba, Y.-L. Tsai, C. Panja, B.E. Koel, Surf. Sci. 419 (1999) 79]. Long-range order in the chemisorbed layer generally diminishes as the oxygen coverage increases above the 0.25ML saturation coverage of the p(2×2) layer, though the persistence of a (2×2) LEED pattern up to about 0.50ML is consistent with the formation of domains of a new, high-density ordered phase. Disordering within the chemisorbed layer becomes more pronounced with continued atomic oxygen adsorption to coverages greater than 0.50ML. Distinct features in the O2 thermal desorption traces at 650K and 560K are attributed to the desorption of oxygen from a high-density ordered phase and disordered domains, respectively, which suggests that the binding energy is lowest for oxygen atoms chemisorbed in the disordered domains. Increasing the atomic oxygen coverage above approximately 0.75ML is shown to result in the growth of Pt oxide particles and disordering of the Pt surface. Decomposition of the Pt oxide particles produces explosive desorption of O2 that is characterized by a shift of the desorption peak to higher temperature and a dramatic increase in the maximum desorption rate with increasing oxygen coverage. The main characteristics of the explosive desorption are well reproduced by a kinetic model in which oxygen atoms are assumed to migrate from oxide domains onto regions of the surface containing chemisorbed oxygen atoms, and with oxygen atoms desorbing only from the chemisorbed layer. The implication of this mechanism is that Pt oxide is more thermodynamically favorable than high concentrations of chemisorbed oxygen atoms on Pt(111), and hence that the growth of Pt oxide on Pt(111) is kinetically limited.}
 }
 
+@article{https://doi.org/10.1002/anie.201304765,
+author = {Arrigo, Rosa and Hävecker, Michael and Schuster, Manfred E. and Ranjan, Chinmoy and Stotz, Eugen and Knop-Gericke, Axel and Schlögl, Robert},
+title = {In Situ Study of the Gas-Phase Electrolysis of Water on Platinum by NAP-XPS},
+journal = {Angewandte Chemie International Edition},
+volume = {52},
+number = {44},
+pages = {11660-11664},
+keywords = {Nafion, platinum, water electrolysis, X-ray photoelectron spectroscopy},
+doi = {https://doi.org/10.1002/anie.201304765},
+abstract = {Chasing down the active state: Near-ambient-pressure X-ray photoelectron spectroscopy was used to study the surface of a Pt electrode during the oxygen evolution reaction (OER). A hydrated Pt metal phase with dissolved oxygen in the near-surface region is OER-active and considered to be the precursor of the analytically detected PtO2, which is in fact the deactivation product of the electrode.},
+year = {2013}
+}
+
+@article{RIENKS20021,
+title = {Interaction of nitric oxide with Pt(100). A fast X-ray photoelectron spectroscopy study},
+journal = {Surface Science},
+volume = {516},
+number = {1},
+pages = {109-117},
+year = {2002},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/S0039-6028(02)01910-6},
+author = {E.D.L. Rienks and J.W. Bakker and A. Baraldi and S.A.C. Carabineiro and S. Lizzit and C.J. Weststrate and B.E. Nieuwenhuys},
+keywords = {Nitrogen oxides, Platinum, Chemisorption, X-ray photoelectron spectroscopy},
+abstract = {The interaction of nitric oxide (NO) with the clean, reconstructed (100) surface of platinum is studied using synchrotron X-ray photoelectron spectroscopy. It is found that molecular adsorption at 200 K yields two different molecular NO species. Above 250 K, NO is found to adsorb both dissociatively and molecularly, giving rise to an oxygen/NO coadsorption structure with a molecular coverage that is half of that at 200 K. At 375 K, adsorption is found to be exclusively dissociative. Furthermore, it is found that NO dissociation yields two different atomic oxygen species. No significant coverage of atomic nitrogen is observed indicating fast combination of nitrogen atoms upon NO dissociation.}
+}
+
 @article{SALIBA1999,
 title = {Oxidation of Pt(111) by ozone (O3) under UHV conditions},
 journal = {Surface Science},
