--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -1,6 +1,6 @@
 The use of catalysts has several advantages such as faster, selective, and more energy-efficient chemical reactions, directed towards producing higher amounts of the desired product while reducing unwanted byproducts.
-Over the years, scientists have developed specialized catalysts for various real-world applications, today \qty{90}{\percent} of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
-Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilizers \parencite{FECHETE20122}.
+Over the years, scientists have developed specialised catalysts for various real-world applications, today \qty{90}{\percent} of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
+Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilisers \parencite{FECHETE20122}.
 
 \begin{figure}[!htb]
     \centering
@@ -12,23 +12,23 @@ Notable advancements in catalysis have led to the production of biodegradable pl
 \end{figure}
 
 Several new challenges have emerged in the field of catalysis related to improving efficiency, reducing environmental impact, and developing sustainable processes.
-First, environmental challenges concern minimizing and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017, Lange2021} and energy supplies.
-Secondly, economical challenges imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialization \parencite{Keisuke2019, Gunay2021}.
+First, environmental challenges concern minimising and/or managing by-products, reducing contamination in effluents/wastewaters, and using sustainable sources of raw materials \parencite{LUDWIG2017, Lange2021} and energy supplies.
+Secondly, economical challenges imply using cheaper, readily available raw materials, increased productivity, and decreased lag-time between discovery to commercialisation \parencite{Keisuke2019, Gunay2021}.
 For example, recent studies suggest that alternative, more economical catalysts, such as non-noble metals \parencite{Zhong2021} and other derived metal-based compounds, need to be tested as possible substitutes for the most frequently used noble metals, which are very efficient but expensive.
 
 Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
-Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and nanoparticles \parencite{WHOAirPollution, HECK2001, GANDHI2003}.
+Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxic gases and nanoparticles \parencite{WHOAirPollution, HECK2001, GANDHI2003}.
 Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (\qty{65}{\percent} of \ce{NO_x}, \qty{\approx 35}{\percent} of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
-To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organization (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
+To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organisation (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
 Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
 
 \section{The oxidation of Ammonia}
 
 \subsection{The Haber-Bosch and Ostwald processes}
 
-\epigraph{Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilizers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
+\epigraph{Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilisers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
-The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilizers from ammonia.
+The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilisers from ammonia.
 Wilhelm Ostwald later received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
 Seven years later, in 1909, Fritz Haber designed a process for the synthesis of ammonia which was later improved by Carl Bosch.
 It is today known as the Haber-Bosch process and is at the origin of the mass production of ammonia using metallic catalysts.
@@ -46,8 +46,8 @@ Fritz Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammon
         \end{scope}
     \end{tikzpicture}
     \caption{
-    Since the discovery of the Ostwald and Haber-Bosch process that allowed the mass production of nitrogen-based fertilizers, the world population increase has been relying on their production and use for agriculture.
-    Today, about \qty{50}{\percent} of the worlds population relies on nitrogen-based fertilizer to produce the food necessary to their alimentation.
+    Since the discovery of the Ostwald and Haber-Bosch process that allowed the mass production of nitrogen-based fertilisers, the world population increase has been relying on their production and use for agriculture.
+    Today, about \qty{50}{\percent} of the worlds population relies on nitrogen-based fertiliser to produce the food necessary to their alimentation.
     Taken from \cite{WorldDataFertilizer}.
     }
     \label{fig:FertilizerWID}
@@ -64,10 +64,10 @@ The oxidation of ammonia can be described by three equations that, depending on 
     4 \ammonia (g) + 5 \dioxygen (g) & \rightarrow 6 \water (g) + 4 \nitricoxide (g)
 \end{align}
 
-The first equation (eq. \ref{eq:AmmoniaOxidationNitrogen}) yields nitrogen (\nitrogen), a naturally occuring gas that does not pollute the environment nor shows any toxic behavious towards humans (tab. \ref{tab:NitrogenGases}).
+The first equation (eq. \ref{eq:AmmoniaOxidationNitrogen}) yields nitrogen (\nitrogen), a naturally occurring gas that does not pollute the environment nor shows any toxic behaviour towards humans (tab. \ref{tab:NitrogenGases}).
 The second equation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}) yields nitrous oxide (\nitrousoxide), a powerful greenhouse effect gas (tab. \ref{tab:NitrogenGases}).
 For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for \qty{6.2}{\percent} of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
-The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilizers (tab. \ref{tab:NitrogenGases}) \textit{via} the synthetization of nitric acid with the Ostwald process.
+The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilisers (tab. \ref{tab:NitrogenGases}) \textit{via} the synthesis of nitric acid with the Ostwald process.
 
 Known side reactions to the oxidation of ammonia are first the recombination of nitric oxide with unreacted ammonia that leads to the production of water and nitrogen (eq. \ref{eq:SideReactions1}), and secondly the thermal decomposition of nitric oxide (eq. \ref{eq:SideReactions2}), that both lower the total yield of the reaction when aiming at the production of nitric oxide.
 
@@ -92,18 +92,18 @@ The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the O
     3 \nitrogendioxide (g) + \water (l) & \rightarrow 2\nitricacid (aq) + \nitricoxide (g)
 \end{align}
 
-Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide which then reacts with water to form nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertlizers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
+Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide which then reacts with water to form nitric acid (\nitricacid), an important actor in multiple industrial process (tab. \ref{tab:NitrogenGases}), including fertilisers such as ammonium nitrate (eq. \ref{eq:AmmoniumNitrate}).
 
 \begin{align}
     \label{eq:AmmoniumNitrate}
     \nitricacid + \ammonia & \rightarrow \ammoniumnitrate
 \end{align}
 
-Hence, important selectivity towards the production of \nitricoxide must be achieved in the first stage when aiming at the production of fertilizers.
+Hence, important selectivity towards the production of \nitricoxide must be achieved in the first stage when aiming at the production of fertilisers.
 However, at low temperature or in the absence of catalyst, the production of \nitrogen is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
 
 Since the 1930s, the presence of a platinum-rhodium (\qty{\approx 10}{\percent} Rh) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \nitricoxide yield to be achieved \parencite{Handforth1934, Heck1982}.
-The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogenous catalytic process \parencite{Bradley1995,PEREZRAMIREZ2004}.
+The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogeneous catalytic process \parencite{Bradley1995,PEREZRAMIREZ2004}.
 The final pathway towards the production of \nitrogen, \nitrousoxide or \nitricoxide depends on the oxygen density and binding on the surface.
 HAVE TO DETAIL MORE HERE
 
@@ -114,17 +114,17 @@ The volatile platinum oxide is considered to be primary responsible for mass los
 
 \subsection{Environmental impact}
 
-If, as illustrated in fig. \ref{fig:FertilizerWID}, nitrogen-based fertilizers have permitted an industrial development of agriculture, they are also the most important contribution to nitrous oxide in the atmosphere from unused volumes of nutrients (fig. \ref{fig:PieGreenhouseNO2}).
-Fertilizers can be either ammonium- or nitrate-based, when plants don't fully absorb all the nutrients, a series of microbe-mediated transformations occur (CHECK).
+If, as illustrated in fig. \ref{fig:FertilizerWID}, nitrogen-based fertilisers have permitted an industrial development of agriculture, they are also the most important contribution to nitrous oxide in the atmosphere from unused volumes of nutrients (fig. \ref{fig:PieGreenhouseNO2}).
+Fertilisers can be either ammonium- or nitrate-based, when plants don't fully absorb all the nutrients, a series of microbe-mediated transformations occur (CHECK).
 These processes lead to the release of nitrogen back into the atmosphere, primarily as nitrogen gas (\nitrogen) and, to a lesser extent, as \nitrousoxide.
-Moreover, nitrogen-based fertilizers and other human activities can lead to nitrogen runoff into water bodies, contributing to eutrophication (excessive growth of algae) and causing harm to aquatic ecosystems (tab. \ref{tab:NitrogenGases}).
+Moreover, nitrogen-based fertilisers and other human activities can lead to nitrogen runoff into water bodies, contributing to eutrophication (excessive growth of algae) and causing harm to aquatic ecosystems (tab. \ref{tab:NitrogenGases}).
 Approximately half of the production of ammonia is lost to the environment \parencite{ERISMAN2007}
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/ammonia/NO2pie.pdf}
     \caption{
-    Pie charts underlining the importance of different gas in the total US greenhouse gas emissions in 2021 (a) and the specific contribution of nitrogen-based fertilizers to the total \nitrousoxide emissions in 2021.
+    Pie charts underlining the importance of different gas in the total US greenhouse gas emissions in 2021 (a) and the specific contribution of nitrogen-based fertilisers to the total \nitrousoxide emissions in 2021.
     LULUCF means Land Use, Land-Use Change, and Forestry.
     Adapted from \cite{EPAGreenhouseGases}.
     }
@@ -133,13 +133,13 @@ Approximately half of the production of ammonia is lost to the environment \pare
 
 Nevertheless, it can also be interesting to be able to remove \ammonia from the atmosphere, a colourless gas with a pungent odour, that irritates the eyes, nose, throat, and respiratory tract if inhaled in small amounts due to its corrosive nature and is poisonous in large quantities.
 Ammonia also pollutes and contributes to the eutrophication and acidification of terrestrial and aquatic ecosystems, and forms secondary particulate matter (PM2.5) when combined with other pollutants in the atmosphere (tab. \ref{tab:NitrogenGases}).
-In that case, the reaction must be tuned towards the production of \nitrogen which is the only non polluant and toxic gas.
+In that case, the reaction must be tuned towards the production of \nitrogen which is the only non pollutant and toxic gas.
 
 Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
 The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach \qty{95}{\percent} efficiency \parencite{MitsubishiSCR}.
-However, there can be a subsequent problem of unreacted ammonia \textit{sliping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
+However, there can be a subsequent problem of unreacted ammonia \textit{slipping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
 
-Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilizers and in environmental applications.
+Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilisers and in environmental applications.
 In both cases, particular focus is on two products of the reaction, namely, \nitricoxide and \nitrogen.
 Depending on the application of the ammonia oxidation, the catalytic reaction must be tuned towards a specific product, this \textit{selectivity} is controlled by the reaction temperature, pressure, the  reactant ratio, and the type of catalyst.
 To be able to drive the reaction, the impact of each parameter \textit{at relevant industrial conditions} on the product pressure must be studied.
@@ -153,16 +153,16 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
     Formula & \ammonia & \nitrogen & \nitrousoxide & \nitricoxide & \nitrogendioxide & \nitricacid & \ammoniumnitrate & \urea \\
     \midrule
     Name & Ammonia & Nitrogen & \begin{tabular}[c]{@{}l@{}}Nitrous oxide,\\ Laughing gas\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitrogen oxide,\\ Nitric oxide\\ Nitrogen monoxide\end{tabular} & Nitrogen dioxide & Nitric acid & \begin{tabular}[c]{@{}l@{}}Ammonium\\ nitrate\end{tabular} & Urea \\
-    Origin & \begin{tabular}[c]{@{}l@{}}Haber-Bosch\\ process\end{tabular} & \begin{tabular}[c]{@{}l@{}}Naturally present\\ in the atmosphere,\\ Ammonia \\ oxidation,\\ Selective catalytic\\ reaction (SCR)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ oxidation,\\ Emissions from\\ nitrogen-based\\ fertilizers\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia oxidation,\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or\\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process (step 1)\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or \\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (step 2)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitric acid\\ neutralization \\ with ammonia\end{tabular} & Ammonia \\
-    Major use & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (fertilizers),\\ Direct use in soil,\\ Fuel,\\ Hydrogen \\ carrier,\\ Cooling, SCR \end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ production\end{tabular} & \begin{tabular}[c]{@{}l@{}}Medicine,\\ Propellant\end{tabular} & Production of nitric acid & Production of nitric acid & \begin{tabular}[c]{@{}l@{}}Fertilizer production,\\ Nitration (explosives,\\ dyes, ...),\\ Propellant,\\ Etching\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ Explosives\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilizing \\ agent,\\ SCR to reduce\\ NOx into N2\end{tabular} \\
-    Toxicity & \begin{tabular}[c]{@{}l@{}}Dangerous for\\ the environment\\ Toxic, \\ Corrosive\end{tabular} & \begin{tabular}[c]{@{}l@{}}Asphyxiation by\\ displacing O2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Anesthetic, \\ euphoric\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidizing, Corrosive,\\ Toxic\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidizing, Corrosive,\\ Toxic, Health hazard\end{tabular} & Oxidizing, Corrosive &  &  \\
-    Pollution & PM formation &  & \begin{tabular}[c]{@{}l@{}}Ozone\\ depletion\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone depletion,\\ Precursor to NO2 in\\ the atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone formation\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes towards\\ NO2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NO2 when\\ used as fertilizer,\\ Eutrophication\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NH3 when\\ used as fertilizer,\\ Eutrophication\end{tabular} \\
-    \begin{tabular}[c]{@{}l@{}}Greenhouse \\ effect\end{tabular} &  &  & \begin{tabular}[c]{@{}l@{}}Very important\\ (298 CO2 eq.)\end{tabular} &  &  &  & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertilizer release\\ N2O in the \\ atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertilizer release\\ N2O in the \\ atmosphere\end{tabular} \\ \bottomrule
+    Origin & \begin{tabular}[c]{@{}l@{}}Haber-Bosch\\ process\end{tabular} & \begin{tabular}[c]{@{}l@{}}Naturally present\\ in the atmosphere,\\ Ammonia \\ oxidation,\\ Selective catalytic\\ reaction (SCR)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ oxidation,\\ Emissions from\\ nitrogen-based\\ fertilisers\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia oxidation,\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or\\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process (step 1)\\ Anthropogenic sources \\ (combustion process, \\ industry, agriculture, ...)\\ Naturally produced \\ from lightning or \\ volcanoes\end{tabular} & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (step 2)\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitric acid\\ neutralisation \\ with ammonia\end{tabular} & Ammonia \\
+    Major use & \begin{tabular}[c]{@{}l@{}}Ostwald process\\ (fertilisers),\\ Direct use in soil,\\ Fuel,\\ Hydrogen \\ carrier,\\ Cooling, SCR \end{tabular} & \begin{tabular}[c]{@{}l@{}}Ammonia \\ production\end{tabular} & \begin{tabular}[c]{@{}l@{}}Medicine,\\ Propellant\end{tabular} & Production of nitric acid & Production of nitric acid & \begin{tabular}[c]{@{}l@{}}Fertiliser production,\\ Nitration (explosives,\\ dyes, ...),\\ Propellant,\\ Etching\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilising \\ agent,\\ Explosives\end{tabular} & \begin{tabular}[c]{@{}l@{}}Fertilising \\ agent,\\ SCR to reduce\\ NOx into N2\end{tabular} \\
+    Toxicity & \begin{tabular}[c]{@{}l@{}}Dangerous for\\ the environment\\ Toxic, \\ Corrosive\end{tabular} & \begin{tabular}[c]{@{}l@{}}Asphyxiation by\\ displacing O2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Anaesthetic, \\ euphoric\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidising, Corrosive,\\ Toxic\end{tabular} & \begin{tabular}[c]{@{}l@{}}Oxidising, Corrosive,\\ Toxic, Health hazard\end{tabular} & Oxidising, Corrosive &  &  \\
+    Pollution & PM formation &  & \begin{tabular}[c]{@{}l@{}}Ozone\\ depletion\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone depletion,\\ Precursor to NO2 in\\ the atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Smog, acid rains, \\ ozone formation\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes towards\\ NO2\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NO2 when\\ used as fertiliser,\\ Eutrophication\end{tabular} & \begin{tabular}[c]{@{}l@{}}Decomposes \\ into NH3 when\\ used as fertiliser,\\ Eutrophication\end{tabular} \\
+    \begin{tabular}[c]{@{}l@{}}Greenhouse \\ effect\end{tabular} &  &  & \begin{tabular}[c]{@{}l@{}}Very important\\ (298 CO2 eq.)\end{tabular} &  &  &  & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertiliser release\\ N2O in the \\ atmosphere\end{tabular} & \begin{tabular}[c]{@{}l@{}}Nitrogen-based\\ fertiliser release\\ N2O in the \\ atmosphere\end{tabular} \\ \bottomrule
     \end{tabular}%
     }
     \caption{
         Nitrogen based molecules that are involved in the oxidation of ammonia, \\
-        the Haber-Bosch process, the Ostwald process or nitrogen-based fertilizers.\\
+        the Haber-Bosch process, the Ostwald process or nitrogen-based fertilisers.\\
         Information compiled from various sources: \\
         \cite{Thiemann2000, HARRISON2001, Baerns2005, Imbihl2007, Hatscher2008}, \\
         \cite{Davidson2009, Resta2020a,Borodin2021,Pottbacker2022}
@@ -191,21 +191,21 @@ To be able to drive the reaction, the impact of each parameter \textit{at releva
     \bottomrule
     \end{tabular}
     \caption{
-        The difficulty in understanding the mechanisms at play during industrial reactions is highlighted with the example of the oxidation of ammonia using heterogenous catalysis.
+        The difficulty in understanding the mechanisms at play during industrial reactions is highlighted with the example of the oxidation of ammonia using heterogeneous catalysis.
         Reproducing the same exact industrial reaction conditions \parencite{Hatscher2008} and sample can be difficult in a laboratory due to the nature of the probe, the sensitivity of the technique, and the design of reactor cells for synchrotrons.
-        This is the so-called material and pressure gap in heterogenous catalysis.
+        This is the so-called material and pressure gap in heterogeneous catalysis.
     }
     \label{tab:Gap}
 \end{table}
 
-The size of crystalline samples for x-ray studies is typically limited by the technique if not by the synthetization process.
-For Bragg coherent diffraction imaging (BCDI), the coherence lengths of the instrument, the need to sample the interfringes with the detector (inversely proportional to the crystal size until not visible anymore), and the need for the beam to fully iluminate the particle are most important (sec. \ref{sec:BCDI}) and translate into an upper limit for the sample size (\qty{\approx 1}{\um}).
+The size of crystalline samples for x-ray studies is typically limited by the technique if not by the synthesis process.
+For Bragg coherent diffraction imaging (BCDI), the coherence lengths of the instrument, the need to sample the interfringes with the detector (inversely proportional to the crystal size until not visible anymore), and the need for the beam to fully illuminate the particle are most important (sec. \ref{sec:BCDI}) and translate into an upper limit for the sample size (\qty{\approx 1}{\um}).
 The advantage of the sub-micron-scale 'nano'-particles typically used in BCDI is that they exhibit a various amount of active sites such as clear facets, edges, corners and defects.
 They are thus considered to be a good approximation of real catalysts (cite).
-Moreover, the particle can be imaged in three dimensions, which allows the visalization and study of both the surface and bulk structure.
+Moreover, the particle can be imaged in three dimensions, which allows the visualisation and study of both the surface and bulk structure.
 
-However, samples below a certain size are not easily measured experimentally with other diffraction techniques for a simple reason which is that the outcoming photon flux is proportionnal to the sampled volume (sec. \ref{eq:ScatteredIntensity}).
-This limitation also exists in BCDI, despite the highly focused beam, which draws a limit between experimental samples (the smallest imaged nanoparticle is \qty{60}{\nm} large - \cite{Bjorling2019, Carnis2021}) and the few \unit{\nm} large nanoparticles used in dynamical field theory (DFT) or molecular dynamics (MD), theoretical approaches only limited by the current computationnal power.
+However, samples below a certain size are not easily measured experimentally with other diffraction techniques for a simple reason which is that the outcoming photon flux is proportional to the sampled volume (sec. \ref{eq:ScatteredIntensity}).
+This limitation also exists in BCDI, despite the highly focused beam, which draws a limit between experimental samples (the smallest imaged nanoparticle is \qty{60}{\nm} large - \cite{Bjorling2019, Carnis2021}) and the few \unit{\nm} large nanoparticles used in dynamical field theory (DFT) or molecular dynamics (MD), theoretical approaches only limited by the current computational power.
 
 The single crystal samples used in this thesis for surface x-ray diffraction (SXRD) and x-ray photoelectron spectroscopy (XPS) are much larger (\qty{\approx 1}{\cm}) and tend more towards a model approach since they only exhibit a single facet on their surface.
 The large sample surface area allows an improved sensitivity to the facet surface structure compared to BCDI, by increasing its scattered signal (sec. \ref{sec:SXRD}).
@@ -231,7 +231,7 @@ The difference in activity between different crystalline facets will be studied 
 
 \section{Aim and Scope}
 
-The oxidation of ammonia is a catalytic reaction that has had an extremely high impact on the $20^{th}$ and $21^{st}$ century, being at the origin of dramatic changes in the world demography with the fertilizer industry, and being today part of numerous industrial process that not only contribute to the fast climate change with greenhouse gases, but also to the ever growing pollution of our ecosystems.
+The oxidation of ammonia is a catalytic reaction that has had an extremely high impact on the $20^{th}$ and $21^{st}$ century, being at the origin of dramatic changes in the world demography with the fertiliser industry, and being today part of numerous industrial process that not only contribute to the fast climate change with greenhouse gases, but also to the ever growing pollution of our ecosystems.
 
 In this first chapter, the importance of the oxidation of ammonia has been underlined.
 It was shown that despite being a major catalytic process in a multi-billion industry, the exact mechanisms of action are not yet understood.
@@ -249,7 +249,7 @@ The SixS beamline (synchrotron SOLEIL), which served as the primary location for
 Notably, the latest advancements in experimental techniques specific to this beamline will be covered.
 Finally, the latest computer programs used for the analysis of the collected data and the challenges of data analysis will be presented so that the reader of this thesis has complete knowledge of every step undertaken to obtain the final results.
 
-In a second chapter, the results obtained during the operando, near-ambient pressure study of the catalytic reaction with three different synchrotron techniques, surface x-ray diffraction, Bragg coherent diffration imaging and x-ray photoelectron spectroscopy, will be presented.
+In a second chapter, the results obtained during the operando, near-ambient pressure study of the catalytic reaction with three different synchrotron techniques, surface x-ray diffraction, Bragg coherent diffraction imaging and x-ray photoelectron spectroscopy, will be presented.
 Sample preparation, the choice of experimental conditions, the reproducibility of the results, the quality of the final data as well as the different difficulties encountered during data collection are discussed.
 Moreover, to explore the correlation between surface structure and catalytic activity, mass spectrometry data was collected simultaneously to the other techniques.
 
