--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -1,6 +1,6 @@
 \section{BCDI} \label{sec:BCDI}
 
-Bragg Coherent Diffraction Imaging (BCDI) \parencite{robinson_coherent_2009} is a powerful technique for the non-destructive characterisation of material structure in three dimensions with unparalleled spatial and strain resolution for a scattering technique, few nanometers \parencite{labat_inversion_2015,cherukara_anisotropic_2018} and \num{e-4} respectively \parencite{Newton2010,Lauraux2020}.
+Bragg Coherent Diffraction Imaging (BCDI) \parencite{robinson_coherent_2009} is a powerful technique for the non-destructive characterisation of material structure in three dimensions with unparalleled spatial and strain resolution for a scattering technique, few nanometres \parencite{labat_inversion_2015,cherukara_anisotropic_2018} and \num{e-4} respectively \parencite{Newton2010,Lauraux2020}.
 
 The BCDI method is reliant on the coherence (sec. \ref{sec:Coherence}) of the light available, thus only began to be exploited at third generation synchrotron sources \parencite{Miao1999,Miao2000,Robinson2001}.
 Since then it was developed into a characterisation tool for \textit{in situ / operando} studies of materials structure \parencite{ulvestad_situ_2016,Kim2019,Carnis2021} and will gain significantly (several orders of magnitude) from further source and beamline improvements as many synchrotrons have recently completed or are in the process of an upgrade from $3^{rd}$ to $4^{th}$ generation synchrotrons.
@@ -20,9 +20,9 @@ This method tends to validate the kinematical approach when working with slightl
 The phase of the incoming and scattered waves must however be corrected for refraction and absorption \parencite{Harder2007, Gao2022} which does not contradict the main hypothesis of the kinematical approach which is that in the Born approximation, the structure factor of the crystal is equal to the Fourier transform of its electronic density \parencite{Paganin}.
 
 Another approach is to write the structure factor as the sum over each atom present in the crystal of the atomic scattering factor multiplied by a phase component (eq. \ref{eq:FCrystal1}).
-In general, the Fourier transform approach is prefered since one can use quick algorithms such as the Fast Fourier Transform \parencite{Cooley1965, Cochran1967} to compute the structure factor as described below, whereas the atomistic approach relies on knowing the position of each atom in the crystal.
+In general, the Fourier transform approach is preferred since one can use quick algorithms such as the Fast Fourier Transform \parencite{Cooley1965, Cochran1967} to compute the structure factor as described below, whereas the atomistic approach relies on knowing the position of each atom in the crystal.
 
-As seen in sec. \ref{sec:StructureFactor}, when considering the crystal to be made of repeating unit cells that organize themselves on the crystal lattice, the structure factor can also be written as the convolution between the Lattice factor $F_{lat}$ and the unit cell structure factor $F_{uc}$.
+As seen in sec. \ref{sec:StructureFactor}, when considering the crystal to be made of repeating unit cells that organise themselves on the crystal lattice, the structure factor can also be written as the convolution between the Lattice factor $F_{lat}$ and the unit cell structure factor $F_{uc}$.
 The shape of the scattering intensity around Bragg peaks is then given by $F_{lat}$, which is the Fourier transform of the crystal's lattice, whereas $F_{uc}$ is the Fourier transform of the crystal's unit cell electronic density.
 
 \begin{figure}[!htb]
@@ -47,7 +47,7 @@ In the case of strained crystals, eq. \ref{eq:Fcrystal} can be rewritten as foll
 where $\vec{r}_{0,j}$ is the ideal position of the atom $j$ in the unit cell and $\vec{u}_{j}$ is the displacement from that position.
 In eq. \ref{eq:FcrystalBCDI2}, all atoms in the unit cell are considered to have the \textit{same displacement} to be able to shift the displacement parameter from the atomic position to the unit cell position, $\vec{u}_{k}$ becomes the displacement of the unit cell $k$.
 
-To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only the intensity in a volume situated near the Bragg peak is considered so that $\vec{q} \approx \vec{G}$ where $\vec{G}$ designates the reciprocal space vector that correponds to the position of the Bragg peak in reciprocal space \parencite{Pfeifer2006, Minkevich2007, Harder2007}.
+To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only the intensity in a volume situated near the Bragg peak is considered so that $\vec{q} \approx \vec{G}$ where $\vec{G}$ designates the reciprocal space vector that corresponds to the position of the Bragg peak in reciprocal space \parencite{Pfeifer2006, Minkevich2007, Harder2007}.
 
 \begin{align}
     \label{eq:FcrystalBCDI3}
@@ -63,24 +63,24 @@ To reduce the complexity in the second part of eq. \ref{eq:FcrystalBCDI2}, only 
 \end{align}
 
 The first part of eq. \ref{eq:FcrystalBCDI6} can be considered to be the Fourier transform of the unit cell $k$ of electronic density $\rho_k(\vec{r})$ in which all atoms have the same displacement vector $\vec{u}_k$, in this equation the electronic density is allowed to vary from one unit cell to another.
-Moreover, one can recognize the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$ in which $\rho_k(\vec{r})$ is the $k-th$ sample of the series that consist in $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, favre-nicolin_semiconductor_2011, Godard2021}.
+Moreover, one can recognise the expression of a discrete Fourier transform (DFT) of frequency $\vec{G}$ in which $\rho_k(\vec{r})$ is the $k-th$ sample of the series that consist in $N_{uc}$ samples \parencite{Cooley1965, Cochran1967, favre-nicolin_semiconductor_2011, Godard2021}.
 The reason for the approximation $\vec{q} \approx \vec{G}$ is simply to be able to use a Fast Fourier Transform (FFT) algorithm to compute the DFT that has a linearithmic time complexity $O(n \, log(n))$.
 This approximation breaks down far away from the Laue condition or if the strain is so important that the condition $(\vec{q}-\vec{G}).\vec{u}_k<<1$ is not anymore respected to move from eq. \ref{eq:FcrystalBCDI5} to eq. \ref{eq:FcrystalBCDI6} \parencite{Takagi1969}.
-A pratical example of the limits of this equation is given is sec. \ref{sec:StrainTempRamp}.
+A practical example of the limits of this equation is given is sec. \ref{sec:StrainTempRamp}.
 
 In the case of highly strained crystal, or when the intensity must be computed far away from Bragg peaks, it is still possible to resort to so-called \textit{atomistic} simulations by computing the scattering intensity from the position of each atom in the crystal (eq. \ref{eq:FCrystal1}).
-However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-perfomance clusters due to a quadratic time complexity $O(n^2)$.
+However, the position of each atom must be known and, for a large crystal, the sum becomes too large to handle even with high-performance clusters due to a quadratic time complexity $O(n^2)$.
 Atomistic simulations are usually used when studying crystals of dimensions below 100 nm \parencite{Dupraz2022}.
 
 For a non-strained crystal, the Lattice factor is the same at each Bragg peak, equal to the Fourier transform of the crystal's lattice.
-In the case of a strained crystal, the additional phase factor introduced in eq. \ref{eq:FcrystalBCDI7} breaks the centrosymmetry around each Bragg peak, due to the inhomogeneous displacement field in the crystal.
+In the case of a strained crystal, the additional phase factor introduced in eq. \ref{eq:FcrystalBCDI7} breaks the centrosymmetry around each Bragg peak, due to the heterogeneous displacement field in the crystal.
 The effect of the displacement can be seen in the distortion of the scattering intensity around Bragg peaks.
 It is important to notice that the phase in eq. \ref{eq:FcrystalBCDI7} is equal to the dot product between the displacement vector and the reciprocal space vector, which means that to possess the complete displacement field, one must collect the scattered intensity around three non-coplanar Bragg peaks \parencite{Newton2010} that will yield the displacement field over an orthogonal base ($\vec{q}_x, \vec{q}_y, \vec{q}_z$).
 
 \subsubsection{Data collection} \label{sec:DataCollectionBCDI}
 
 The data collection during a BCDI measurement is performed by continuously rocking the sample around the incident angle, which will result in a tilt of the associated Ewald sphere and in the detector probing a different slice of the reciprocal space for each step.
-This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the associated 3D scattering intensity is illutrated in fig. \ref{fig:3DDP} (right).
+This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the associated 3D scattering intensity is illustrated in fig. \ref{fig:3DDP} (right).
 
 \begin{figure}[!htb]
     \centering
@@ -89,14 +89,14 @@ This measurement is called a rocking curve (fig. \ref{fig:3DDP} - left), the ass
     \caption{
     (Left) Rocking curve for the measurement of the 3D scattered intensity around a Bragg peak. Taken from \cite{Willmott}.
     (Right) 3D diffraction pattern collected at SixS (SOLEIL).
-    Different iso-surfaces from high (red) to low (yellow) intensity are plotted, highlighting the drop of the scattered intensity as a function of $q_{hkl}+\delta q$ where $\delta q$ is the distance from the center of the Bragg peak.
+    Different iso-surfaces from high (red) to low (yellow) intensity are plotted, highlighting the drop of the scattered intensity as a function of $q_{hkl}+\delta q$ where $\delta q$ is the distance from the centre of the Bragg peak.
     \textcolor{Important}{COLORBAR}
     }
     \label{fig:3DDP}
 \end{figure}
 
 The measurements are commonly collected in angular space and can be converted into q-space to address potential distortions arising from the way the detector intersects with the Ewald sphere, and to be able to compare different Bragg peaks in the reciprocal space.
-However, this step is usually avoided since the intermediate interpolation process can be unaccurate, especially when the scattering intensity is low.
+However, this step is usually avoided since the intermediate interpolation process can be inaccurate, especially when the scattering intensity is low.
 
 \subsection{Phase retrieval}\label{sec:PhaseRetrieval}
 
@@ -126,11 +126,11 @@ There is also the possibility to adapt the detector distance to get a good overs
 At \qty{8}{\keV}, to get an oversampling of 3, the detector must be positioned at \qty{6.4}{\m} for a particle of \qty{6}{\um}.
 
 In three dimensions, the oversampling condition becomes $\sigma>2^{1/3}$ \parencite{Miao1998, Miao2000, miao_possible_2000}.
-When it comes to Fourier transforms, higher oversampling can offer several advantages such as reducing the possibility of aliasing (high-frequency components being mistakenly represented as lower frequencies due to insufficient sampling), spectral leakage (frequency components spread into neighboring frequency bins in the Fourier transform, minimized if the frequency bins become narrower).
-Moreover, with more densely spaced samples, the interpolation process can more faithfully reconstruct the original signal without introducing artifacts.
+When it comes to Fourier transforms, higher oversampling can offer several advantages such as reducing the possibility of aliasing (high-frequency components being mistakenly represented as lower frequencies due to insufficient sampling), spectral leakage (frequency components spread into neighbouring frequency bins in the Fourier transform, minimised if the frequency bins become narrower).
+Moreover, with more densely spaced samples, the interpolation process can more faithfully reconstruct the original signal without introducing artefacts.
 However, high oversampling takes more time and can for example limit the number of rocking curves that can be recorded.
 An oversampling of three in each direction is in general sufficient to successfully reconstruct the probed samples \parencite{Dupraz2015}.
-The oversampling condition dictates partly the intrumental parameters which define the extent of the data voxels, the small volumes that constitute the 3D data array.
+The oversampling condition dictates partly the instrumental parameters which define the extent of the data voxels, the small volumes that constitute the 3D data array.
 
 \cite{fienup_reconstruction_1978, Fienup1982, Fienup1986} have laid the ground for computer methods that permit phase retrieval with computer algorithms based on real-space and reciprocal space constraints, once the oversampling condition has been satisfied.
 The error-reduction (ER) algorithm works by iterating between real and reciprocal space by the means of fast Fourier transforms (FFT) and inverse fast Fourier transforms (IFFT) methods.
@@ -167,10 +167,10 @@ The error-metric used to follow the convergence of the algorithm is simply the m
 \end{equation}
 
 The main drawback of this error-metric is that each voxel is given the same weight, in this assumption is not a problem when working near the Bragg peak, $4^{th}$ generation synchrotron that possess a higher flux make it possible to sample the signal in region further away from the Bragg peak.
-A detailed study of the impact of trying to improve the image resolution by increasing the distance from the center of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
+A detailed study of the impact of trying to improve the image resolution by increasing the distance from the centre of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
 \textcolor{Important}{perspectives ?}
 
-More algorithms have since then been developped that try to help converge towards the final solution without being stuck in local minima such as the hybrid input-output (HIO) and relaxed averaged alternating reflections (RAAR) algorithms, by introducing a new parameter, $\beta$, which relaxes the threshold condition in real space from the ER algorithm.
+More algorithms have since then been developed that try to help converge towards the final solution without being stuck in local minima such as the hybrid input-output (HIO) and relaxed averaged alternating reflections (RAAR) algorithms, by introducing a new parameter, $\beta$, which relaxes the threshold condition in real space from the ER algorithm.
 Additional details can be found in \cite{Marchesini2003,Luke2005,Marchesini2007}.
 
 Finally, a major recent improvement of the phase retrieval algorithm is the possibility to take into account the partial coherence of the beam together with the point-spread function of the detector by using the deconvolution Richardson-Lucy algorithm \parencite{Richardson1972, LucyAlgo1974, Fish1995, Clark2012}.
@@ -187,21 +187,21 @@ This is the case in simulated data but is not with experimental data for which t
 The community has therefore relied so far on three methods to estimate the spatial resolution of the reconstructed electronic density.
 
 First, the Phase Retrieval Transfer Function (PRTF) \parencite{chapman_high-resolution_2006} is the \textit{ratio} of the calculated structure factor $|F_k(\vec{q})|$ to the square-root of the measured intensity $\sqrt{I_k(\vec{q})}$ as a function of the resolution shell.
-The resolution shell $k$ is defined as all voxels of position $q=\sqrt{q_x^2 + q_y^2 +q_z^2}$ that satify the condition $q \in [q_k, q_{k+1}]$.
+The resolution shell $k$ is defined as all voxels of position $q=\sqrt{q_x^2 + q_y^2 +q_z^2}$ that satisfy the condition $q \in [q_k, q_{k+1}]$.
 $\delta q$ is the width of the resolution shell which divides the extent $[q_{min}, q_{max}]$ of the sampled reciprocal space in $N$ shells so that $q_{max} = q_{min} + N \times \delta q$ and $q_{k+1} - q_{k} = \delta q$.
 
 \begin{equation}
     PRTF(q_k, q_{k+1}) = \frac{|<F_k(\vec{q})>|}{<\sqrt{I_k(\vec{q})}>}
 \end{equation}
 
-Secondly, the Fourier shell correlation (FSC) \parencite{van_heel_fourier_2005} measures the \textit{normalized cross-correlation coefficient} between the structure factor of two independent reconstructions, also as a function of the resolution shell but from two independent datasets collected with the same instrumental parameters:
+Secondly, the Fourier shell correlation (FSC) \parencite{van_heel_fourier_2005} measures the \textit{normalised cross-correlation coefficient} between the structure factor of two independent reconstructions, also as a function of the resolution shell but from two independent datasets collected with the same instrumental parameters:
 
 \begin{equation}
     FSC(q_k, q_{k+1}) = \frac{ |\sum F_{1,k} F_{2,k}^*| }{\sqrt{ \sum F_{1,k} F_{1,k}^* \times \sum F_{2,k} F_{2,k}^*}}
 \end{equation}
 
-Both of these methods allow us to quantify the distance from the center of the Bragg peak after which one of the criteria diverges, which yields a corresponding real space resolution.
-There are several limitations to these methods, first the resolution curve as a function of $|\vec{q}|$ strongly depends on the width of the bins used to create the resolution shells, the number of voxels in each bin is dependent on the distance from the center $q_{min}$ and the voxel size is usually not isotropic.
+Both of these methods allow us to quantify the distance from the centre of the Bragg peak after which one of the criteria diverges, which yields a corresponding real space resolution.
+There are several limitations to these methods, first the resolution curve as a function of $|\vec{q}|$ strongly depends on the width of the bins used to create the resolution shells, the number of voxels in each bin is dependent on the distance from the centre $q_{min}$ and the voxel size is usually not isotropic.
 Finally and most importantly, it supposes that the resolution is isotropic in reciprocal space, which is false since the signal to noise ratio will be much higher around the rods perpendicular to the crystal's facets \parencite{cherukara_anisotropic_2018}.
 Indeed, the scattered intensity along the rods is proportional to the size (\textit{i.e.} the number of unit cells) of the crystal in the direction perpendicular to the facet.
 Thus, for large facets, the rod intensity will be much more intense and increase the resolution in that direction.
@@ -214,7 +214,7 @@ Another method is to work in a similar way to the Fourier shell correlation by r
 This method is then called the strain shell correlation \parencite{Girard2020}.
 
 However, one must keep in mind that the upper threshold for the strain resolution exists based on the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ condition, which mostly affect the quality of the phase retrieval, highly strained crystals are very difficult to reconstruct and represent the next milestone in Bragg coherent diffraction imaging.
-One could imagine a future in which the atomistic computation of the scattering factor has been so optimized that phase retrieval algorithms would only be needed to provide an initial guess to the electronic density, and be replaced in the final steps by a simple fitting of the computed structure factor to the square root of the measured intensity.
+One could imagine a future in which the atomistic computation of the scattering factor has been so optimised that phase retrieval algorithms would only be needed to provide an initial guess to the electronic density, and be replaced in the final steps by a simple fitting of the computed structure factor to the square root of the measured intensity.
 
 \textcolor{Important}{reverse Monte Carlo pour permettre un fit multi-paramètres
  Monte carlo \parencite{RLMcGreevy_2001}}
@@ -224,7 +224,7 @@ One could imagine a future in which the atomistic computation of the scattering 
 After phase retrieval, it is possible to exploit the electronic density of the reconstructed crystal.
 The surface of the reconstructed crystal corresponds to a layer of voxels in the three dimensional array.
 J. Carnis \textit{et al.} \parencite*{Carnis2019_scientific_reports} have presented guidelines on how to correctly select the surface voxels, which are detailed below.
-The histogram in fig. \ref{fig:histo} represents the number of voxels per bin of normalized electronic density, the observed peak corresponds to the bulk voxels for which the amplitude of the electronic density is close to the maximum value (fig. \ref{fig:histo} - right).
+The histogram in fig. \ref{fig:histo} represents the number of voxels per bin of normalised electronic density, the observed peak corresponds to the bulk voxels for which the amplitude of the electronic density is close to the maximum value (fig. \ref{fig:histo} - right).
 An empiric criterion to select the voxels that correspond to the crystal's surface is to take the lowest foot of that peak, here around \num{0.75}, the surface being defined as the hull surrounding the bulk voxels.
 
 \begin{figure}[!htb]
@@ -240,7 +240,7 @@ An empiric criterion to select the voxels that correspond to the crystal's surfa
    \label{fig:histo}
 \end{figure}
 
-Once the threshold for the iso-surface is selected, it is possible to visualize a contour of the object with specialized solutions such as \textit{Paraview} (\cite{Ahrens2001} - fig. \ref{fig:facets_paraview}) or \textit{Gwaihir} (\cite{Simonne2022} - fig. \ref{fig:3D_object}).
+Once the threshold for the iso-surface is selected, it is possible to visualise a contour of the object with specialised solutions such as \textit{Paraview} (\cite{Ahrens2001} - fig. \ref{fig:facets_paraview}) or \textit{Gwaihir} (\cite{Simonne2022} - fig. \ref{fig:3D_object}).
 Crystallographic facets can be identified on the surface of the reconstructed object when studying faceted objects with a highly coherent beam \parencite{richard_crystallographic_2018}, allowing in-depth studies of facet dependent strain and displacement.
 As described in sec. \ref{sec:Catalysis}, lattice strain and displacement are key factors in fields such as heterogeneous catalysis \parencite{ulvestad_situ_2016,kim_active_2018,fernandez_situ_2019,Passos2020,Carnis2021} or electrochemistry \parencite{vicente_bragg_2021, Atlan2023}.
 
@@ -248,7 +248,7 @@ Retrieving the facets can be achieved by analysing the probability distributions
 This method is used in the \textit{Paraview} plugin FacetAnalyser \parencite{GrothausmannBeare2015}, and yields a list of features detailed in tab. \ref{tab:facets}.
 The orientation of each facet is retrieved by analysing the angles between the normal of each facet and a reference direction such as the [111] direction.
 
-In the case of highly resoluted measurement, another approach could be inspired from  image processing and convolutional neural networks in which 3D convolutions kernels could help identify the object surface \parencite{RaschkaMirjalili2019}.
+In the case of highly resolved measurement, another approach could be inspired from  image processing and convolutional neural networks in which 3D convolutions kernels could help identify the object surface \parencite{RaschkaMirjalili2019}.
 By tuning the kernel size and values, it is possible to be sensitive to boundaries in specific directions.
 
 In this example, the FacetAnalyser plugin is used (fig. \ref{fig:facets_paraview}). Note that the edges and corners, sites of particular interest for heterogeneous catalysis \parencite{Taylor1925}, are also retrieved together as voxels not belonging to any facets.
@@ -259,7 +259,7 @@ The result depends on the algorithm input parameters, such as the minimum relati
     \includegraphics[width=0.66\textwidth]{/home/david/Documents/PhD/Figures/gwaihir/facets_D6.png}
     \caption{
     On this screenshot taken from \textit{Paraview}, the particle facets are identified by a white contour.
-    The coloring represents the phase of the reconstructed object along the [111] direction, proportional to the lattice displacement along the [111] direction.
+    The colouring represents the phase of the reconstructed object along the [111] direction, proportional to the lattice displacement along the [111] direction.
     This particle has a diameter of about 800 nm.
     }
     \label{fig:facets_paraview}
