--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -2,7 +2,7 @@
 
 \subsection{Synchrotron radiation}
 
-SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour l’Utilisation du Rayonnement Électromagnétique)) is a $3^{rd}$ generation synchrotron source facility build in 2006 and localized near Paris, France, which operates at an electron energy of \qty{2.75}{\GeV} with a storage ring diameter of \qty{354}{\m}.
+SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour l’Utilisation du Rayonnement Électromagnétique)) is a $3^{rd}$ generation synchrotron source facility build in 2006 and localised near Paris, France, which operates at an electron energy of \qty{2.75}{\GeV} with a storage ring diameter of \qty{354}{\m}.
 
 \begin{figure}[!htb]
     \centering
@@ -15,7 +15,7 @@ SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour 
     \label{fig:SOLEIL}
 \end{figure}
 
-Synchrotron radiation is generated when electrons traveling at relativistic speeds are accelerated and forced to travel in curved trajectories by strong magnetic fields supplied by \textit{bending magnets}.
+Synchrotron radiation is generated when electrons travelling at relativistic speeds are accelerated and forced to travel in curved trajectories by strong magnetic fields supplied by \textit{bending magnets}.
 The radiation spans a broad spectrum, from infrared to X-rays, depending on the electrons, the acceleration, and the strength of the magnetic fields.
 
 First, electrons are produced by an electron gun and accelerated in a linear accelerator (LINAC), then by a booster ring.
@@ -30,7 +30,7 @@ Each beamline at SOLEIL begins with one of those insertion devices or with a ben
 
 \subsection{The SixS beamline}
 
-SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedicated to the structural characterization of surfaces and interfaces (solid-solid or solid-liquid), as well as nano-objects in controlled environments by the means of surface-sensitive x-ray scattering techniques.
+SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedicated to the structural characterisation of surfaces and interfaces (solid-solid or solid-liquid), as well as nano-objects in controlled environments by the means of surface-sensitive x-ray scattering techniques.
 
 \begin{figure}[!htb]
     \centering
@@ -42,7 +42,7 @@ SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedi
     \label{fig:SixSBeamline}
 \end{figure}
 
-The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter) which delivers a horizontally polarized beam characterized by its horizontal and vertical full-width at half maximum (FWHM), respectively $\sigma_H = \qty{913.7}{\um}$ and $\sigma_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
+The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter) which delivers a horizontally polarised beam characterised by its horizontal and vertical full-width at half maximum (FWHM), respectively $\sigma_H = \qty{913.7}{\um}$ and $\sigma_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
 
 An absorber and diaphragm are placed after the undulator to cut any parasitic signal from the source, a double crystal monochromator (DCM) of silicium (111) allows the selection of a monochromatic beam of thin bandwidth $\Delta \lambda$ in the range of \qtyrange{4}{20}{\keV} after receiving the white beam.
 The crystals are cooled by liquid nitrogen due to the high intensity of the white beam and produce harmonics depending on the incident angle of the beam through diffraction (Bragg's law, eq. \ref{eq:Bragglaw}), only the first harmonic is selected with the second crystal.
@@ -73,13 +73,13 @@ The second experimental hutch, mainly used for ultra-high vacuum experiments, wa
 
 \subsection{Multi environment diffractometer}\label{sec:MED}
 
-The multi-environment diffractometer (MED) (fig. \ref{fig:MEDDiffractometer}) at SixS can be used in either a vertical or horizontal configuration (fig. \ref{fig:Diffractometer}), and can accomodate a large variety of experimental chambers around the sample stage.
+The multi-environment diffractometer (MED) (fig. \ref{fig:MEDDiffractometer}) at SixS can be used in either a vertical or horizontal configuration (fig. \ref{fig:Diffractometer}), and can accommodate a large variety of experimental chambers around the sample stage.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[trim=100 225 100 275, clip, width=0.9\textwidth]{/home/david/Documents/PhD/Figures/sixs/Diffractometer.pdf}
     \caption{
-        Multi-environment diffractometer (MED), here in the horizontal configuration, accomodating the XCAT reactor \parencite{VanRijn2010}.
+        Multi-environment diffractometer (MED), here in the horizontal configuration, accommodating the XCAT reactor \parencite{VanRijn2010}.
         The XCAT reactor is placed upon a hexapod which allows the sample to move in three orthonormal directions.\\
         Image copyright by Leiden Probe Microscopy (\url{https://leidenprobemicroscopy.com}).
     }
@@ -135,7 +135,7 @@ Since the coherence slits also have the counter effect of decreasing the total p
 A catalysis reactor is mounted on the sample stage of the MED for the study of catalytic reactions.
 A 3D view in the horizontal configuration with the high pressure surface diffraction reactor XCAT (X-ray CATalysis) set on the goniometer is illustrated in fig. \ref{fig:MEDDiffractometer}.
 
-This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a}, and couples a UHV environment for classical surface science preparations (sputtering, annealing, evaporations) with an ambient pressure reactor.
+This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a}, and couples a UHV environment for classical surface science preparations (sputtering, annealing, evaporation) with an ambient pressure reactor.
 %Sputtering is a process in which atoms or ions from a solid target material are ejected or "sputtered" from the surface of the target due to the impact of high-energy particles.
 In the frame of this thesis, the metallic single crystal are purchased already cut and polished for SXRD experiments, introduced in the reactor and cleaned by sputtering \parencite{Taglauer1990} before the experiment.
 It is also possible to heat the sample up to \qty{900}{\degreeCelsius} for an extended period of time to anneal the sample after sputtering \parencite{MUSKET1982143}.
@@ -145,7 +145,7 @@ It is also possible to heat the sample up to \qty{900}{\degreeCelsius} for an ex
     \includegraphics[trim=10 325 350 64, clip, width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/SampleHolder.pdf}
     \caption{
         Sample holder used for the XCAT catalysis reactor.
-        A Berylium or PEEK dome (not shown) closes the reactor, the V-seal sealing the reactor atmosphere from the outside.
+        A Beryllium or PEEK dome (not shown) closes the reactor, the V-seal sealing the reactor atmosphere from the outside.
         \textcolor{Important}{TRY TO FIX WORDS, MAYBE TICKZ ?, add ceramic}
     }
     \label{fig:SampleHolder}
@@ -157,7 +157,7 @@ The protruding ends of the screws on the opposite side of the ceramic slab serve
 This design not only enables swift attachment and detachment of the sample holder but also ensures a robust setup in both horizontal and vertical orientations.
 The sample is then placed on top of the sample holder and set in place by a wire.
 All the materials used in the reactor were carefully chosen as not catalytically active for specific reactions.
-For example, tantalum (Ta) parts (screws and wire) are used in oxygen rich envronment since Ta is more resilient than molybdenum (Mo) to oxidation reaction, whereas Mo parts are used in hydrogen rich environment because it is more resilient to hydrides formation.
+For example, tantalum (Ta) parts (screws and wire) are used in oxygen rich environment since Ta is more resilient than molybdenum (Mo) to oxidation reaction, whereas Mo parts are used in hydrogen rich environment because it is more resilient to hydrides formation.
 \textcolor{Important}{find ref otherwise}
 A boron nitride paint additionally covers and protects the screws and wires used to fix the sample holder and the sample from oxidation effects.
 The heater power is adjusted as a function of the sample temperature read by a type C thermocouple.
@@ -174,7 +174,7 @@ The heater power is adjusted as a function of the sample temperature read by a t
     \label{fig:MEDV}
 \end{figure}
 
-The gas composition inside the reactor is tuned by setting the flow for each gas in standard cubic centimeters per minute (SCCM).
+The gas composition inside the reactor is tuned by setting the flow for each gas in standard cubic centimetres per minute (SCCM).
 The inlet and outlet of the gases in the reactor volume are through holes in the ceramic slab that are set just below the sample holder.
 The standard supported gases are argon (\argon), oxygen (\dioxygen), nitrogen oxide (\nitricoxide), carbon monoxide (\ce{CO}) and hydrogen (\ce{H_2}).
 It is possible to change the gases used by computing the correct conversion factor for a mass flow controller, each one originally set to work with a specific gas.
@@ -184,7 +184,7 @@ Moreover, the pressure inside the volume of the reactor can be controlled by a p
 Finally, the evolution of the product and reactant pressure during the catalytic reaction is probed by a residual gas analyser (RGA) which is connected to a leak from the reactor outlet (fig. \ref{fig:GasSupplySystem}).
 The leak pressure is usually in the range of \qty{e-6}{\bar} and the assumption is made that the partial pressure of each mass detected by the RGA after the leak is equal to the partial pressure in the reactor multiplied by the same constant for all masses.
 
-Overall, this experimental setup allows the exploration of a large, multi-dimentionnal parameter space during heterogeneous catalysis experiments connecting reaction kinetics and surface structure.
+Overall, this experimental setup allows the exploration of a large, multi-dimensional parameter space during heterogeneous catalysis experiments connecting reaction kinetics and surface structure.
 
 \begin{figure}[!htb]
     \centering
@@ -205,7 +205,7 @@ The main setbacks being the lack of sputtering gun and the impossibility to stud
 The measurement process for the collection of the scattered intensity is detailed in sec. \ref{sec:DataCollectionSXRD} for surface x-ray diffraction and in sec. \ref{sec:DataCollectionBCDI} for Bragg coherent diffraction imaging.
 Since this reactor was designed for SXRD together with a 6-circle diffractometer, the entire surface of the sample is accessible during the experiment which allows the full access to the reciprocal space to probe any particular symmetry, limited only by the extent of the Ewald sphere (\textit{i.e.} a maximum extent in $\vec{q}$).
 
-Different detectors can be accomodated on the diffractometer arm.
+Different detectors can be accommodated on the diffractometer arm.
 On one hand, the MERLIN \parencite{BEWLEY20061029} combines a small pixel size (\qty{55}{\um}) with a large array (\numproduct{512 x 512} pixels), few gaps, and a large dynamic counting range, similar to the MAXIPIX detector \parencite{ponchut_maxipix_2011} which was first used for coherence experiments on the beamline \parencite{Schavkan2013, Li2020}.
 For example, the pixel size is of main importance when computing the oversampling requirements (sec. \ref{sec:PhaseRetrieval}).
 
