--- a/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
+++ b/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
@@ -4,12 +4,12 @@
 % need to put scan table in appendix
 % specific rocking curves
 
-To be able to de-corellate the effect of temperature from the effect of the catalytic reaction on the nanoparticle structure, the alumina-supported nanoparticles were gradually heated from \qtyrange{25}{600}{\degreeCelsius} under a constant \argon-based gas flow (\qty{50}{\ml\per\min}) and at a pressure of \qty{0.3}{\bar}.
+To be able to de-correlate the effect of temperature from the effect of the catalytic reaction on the nanoparticle structure, the alumina-supported nanoparticles were gradually heated from \qtyrange{25}{600}{\degreeCelsius} under a constant \argon-based gas flow (\qty{50}{\ml\per\min}) and at a pressure of \qty{0.3}{\bar}.
 
 The same nanoparticle (so-forth called nanoparticle Amaterasu) was tracked during the heating process, rocking-curves around the (111) Bragg peak were measured at different temperatures to probe its structural evolution, with \qty{201}{steps}, each counting for \qty{5}{\second}, resulting in an angular step of \ang{0.005}.
 The measurement of a rocking curve took approximately \qty{22}{\minute}, with \qty{25}{\percent} of dead time.
 Two rocking curves were measured at each temperature during the ramp to have improved statistics about the catalyst structure.
-The alignement of the sample was performed with the procedure as detailed in sec. \ref{sec:BCDISetup}.
+The alignment of the sample was performed with the procedure as detailed in sec. \ref{sec:BCDISetup}.
 
 \subsection{Experimental setup for BCDI experiments in the vertical geometry}\label{sec:BCDISetup}
 
@@ -20,19 +20,19 @@ At SixS, a rocking curve lasts between \qtyrange{20}{90}{\min} depending on the 
 Once the raw data is obtained, the particle must be \textit{reconstructed} (sec. \ref{sec:PhaseRetrieval}), and - if of interest - the displacement and strain arrays can be retrieved.
 The analysis workflow can take up to an hour, which totals to a maximum of two hours from the start of the measurement to the moment when the user has a good idea of the sample shape and structure.
 
-SixS is a beamline that does not only carry out BCDI experiment, but also SXRD experiments, in the same experimental end-station, the multi-environment diffractomer (MED, sec. \ref{sec:MED}).
+SixS is a beamline that does not only carry out BCDI experiment, but also SXRD experiments, in the same experimental end-station, the multi-environment diffractometer (MED, sec. \ref{sec:MED}).
 When aiming at performing \textit{operando} catalysis experiments, switching from one setup to another can take up to a few days.
 This leaves only a limited remaining amount of time to align the sample, find a suitable nanoparticle, and carry out the experimental plan.
 
 Li \textit{et al.} \parencite*{Li2020}, who have first shown that the SixS beamline could be used to carry out BCDI experiment, also started to work on improving the BCDI measurement process.
-By comparing continuous and step-by-step measurements, they have shown that continous scanning would result in the same data quality while decreasing the measurement dead-time by \qty{30}{\percent}, thereby paving the way for quicker BCDI measurements.
+By comparing continuous and step-by-step measurements, they have shown that continuous scanning would result in the same data quality while decreasing the measurement dead-time by \qty{30}{\percent}, thereby paving the way for quicker BCDI measurements.
 
 During this thesis, the measurement process was further improved by taking advantage of the new possibility to perform continuous \textit{on-the-fly} scans at SixS, while moving the hexapod holding the sample.
-When using the coherence setup (fig. \ref{fig:OpticalSetup}) with the diffractomer in the vertical geometry (fig. \ref{fig:Diffractometer}), the beam focused on the sample is about \qty{1}{\um} large vertically, the horizontal footprint depending on the incident angle between the beam and the sample.
+When using the coherence setup (fig. \ref{fig:OpticalSetup}) with the diffractometer in the vertical geometry (fig. \ref{fig:Diffractometer}), the beam focused on the sample is about \qty{1}{\um} large vertically, the horizontal footprint depending on the incident angle between the beam and the sample.
 The incoming angle $\mu$ is set to the Bragg angle ($\theta$ in eq. \ref{eq:Bragglaw}) and the scattered x-rays are collected by setting the out-of-plane detector angle $\gamma$ at a position equal to $2\theta$ (similar to fig. \ref{fig:EwaldSphereSpecular}).
 Finally, by simultaneously moving the sample with the hexapod and recording the Bragg scattered intensity with the detector, it is possible to map the sample surface with a sub-micron resolution (fig. \ref{fig:SampleMapping}).
 A nanoparticle with a width equal to \qty{300}{\nm} was identified with this technique, which is a good estimate of the spatial resolution that can be attained, limited by the hexapod resolution (\qty{\approx 500}{\nm}) and the beam size.
-A new generation of motots with a nanometric resolution will further improve this technique in the future.
+A new generation of motors with a nano-metric resolution will further improve this technique in the future.
 
 During this experiment, the simplest possible measurement geometry is to measure the (111) Bragg peak, perpendicular to the sample surface since the nanoparticles have their c-axis oriented along the [111] direction, parallel to the normal of the sample holder.
 % ($\vec{z}$ direction in the laboratory frame).
@@ -45,19 +45,19 @@ Both in-plane angles are thereby kept to zero during the mapping process.
     \caption{
         Microscope image of the sample seen through the sapphire window of the PEEK dome (left).
         Map of the sample performed in Bragg condition (right), the high intensity (red) areas correspond to platinum nanoparticles.
-        The letters, numbers and isolated nanoparticles in the centre of squares can be recognized on the sample.
+        The letters, numbers and isolated nanoparticles in the centre of squares can be recognised on the sample.
         \textcolor{Important}{colorbar}
     }
     \label{fig:SampleMapping}
 \end{figure}
 
-On the other hand, \textit{Gwaihir} (sec. \ref{sec:Gwaihir}) was developped primarily for the SixS beamline to counter the long analysis process, which allowed a significant reduction in the analysis time from around an hour to a few minutes.
+On the other hand, \textit{Gwaihir} (sec. \ref{sec:Gwaihir}) was developed primarily for the SixS beamline to counter the long analysis process, which allowed a significant reduction in the analysis time from around an hour to a few minutes.
 The following beamtimes profit from the new software by having a more \textit{solution}-driven experimental process.
 Indeed, to be measured, a nanoparticle must be isolated, not too small (weak scattered intensity), not too big (loss of coherence, fringes not visible), and not too initially strained (difficult to obtain a good guess of the support).
 These conditions are sometimes difficult to assert by simply looking at the diffraction pattern.
 Therefore, quick inversion using \textit{Gwaihir} allowed a faster decision process regarding the continuation or not of the nanoparticles measurement.
 
-Successfull measurements by \cite{Lim2021} have permitted the simulatenous use of BCDI measurements from SixS with measurements from other imaging beamlines (ID01 - ESRF, P10 - DESY), designing a robust method to identify defects in the real space with convolutional neural networks (CNN).
+Successful measurements by \cite{Lim2021} have permitted the simultaneous use of BCDI measurements from SixS with measurements from other imaging beamlines (ID01 - ESRF, P10 - DESY), designing a robust method to identify defects in the real space with convolutional neural networks (CNN).
 
 In the frame of this thesis, the required beam size was obtained with a Fresnel zone-plate (focal distance of \qty{20}{\cm}), which focused the beam down to \qty{1}{\um} (horizontally) $\times$ \qty{2}{\um} (vertically).
 A coherent portion of the beam was selected with high precision slits by matching their horizontal and vertical gaps with the transverse coherence lengths of the beamline: \qty{20}{\um} (horizontally) and \qty{100}{\um} (vertically).
@@ -70,7 +70,7 @@ Three-dimensional (3D) diffraction data were collected with rocking curves of th
 The in-plane ($\omega$) and out-of-plane ($\mu$) angles of the sample at respectively equal to \ang{0} and \ang{18.6} when measuring at room temperature.
 The in-plane ($\delta$) and out-of-plane ($\gamma$) angles of the detector are respectively equal to \ang{0} and \ang{37.2}.
 The value of the scattering angle $\mu$ ($\theta$ in eq. \ref{eq:Bragglaw}) and the out-of-plane detector angle ($2\theta$) are expected to vary as a function of the temperature during the experiment due to the thermal expansion of the sample.
-The alignement of the sample was performed with the same procedure as detailed in sec. \ref{sec:SXRDSetupV}.
+The alignment of the sample was performed with the same procedure as detailed in sec. \ref{sec:SXRDSetupV}.
 
 \textit{Gwaihir} was used to process the data using the workflow detailed in sec. \ref{sec:Gwaihir}, each dataset was saved as a \textit{cxi} file containing all of the data and metadata related to the data reduction process.
 The use of iterative algorithm for phase retrieval is detailed in tab. \ref{tab:ReconstructionProcess}.
@@ -134,7 +134,7 @@ The displacement field could not be perfectly unwrapped at \qty{150}{\degreeCels
     \label{fig:AmaterasuB}
 \end{figure}
 
-The nanoparticle shape stayed roughly the same during the beginning of the temperature ramp and after the introduction of ammonia, the triangular [111] facet at the top of the particle can be recognized, with the same agency of the surrounding facets (fig. \ref{fig:AmaterasuA} - [111] facet surrounded by six facets, [100], [010], [001], [1$\bar{1}$1], [11$\bar{1}$], [$\bar{1}$11]).
+The nanoparticle shape stayed roughly the same during the beginning of the temperature ramp and after the introduction of ammonia, the triangular [111] facet at the top of the particle can be recognised, with the same agency of the surrounding facets (fig. \ref{fig:AmaterasuA} - [111] facet surrounded by six facets, [100], [010], [001], [1$\bar{1}$1], [11$\bar{1}$], [$\bar{1}$11]).
 The bottom facet, in contact with the substrate, has a [$\bar{1}\bar{1}\bar{1}$] orientation.
 
 The low spatial resolution of the reconstructed nanoparticle due to the quality of the measurement (low coherent flux, \textit{i.e.} difficulty to resolve the scattered intensity far from the Bragg peak) resulted in difficulties when trying to identify the smallest facets on the nanoparticles, as well as their orientation.
@@ -144,7 +144,7 @@ The low spatial resolution of the reconstructed nanoparticle due to the quality 
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/stereographic_projection_bottom.pdf}
     \caption{
         Stereographic projection perpendicular to $[\bar{1}\bar{1}\bar{1}]$ crystallographic orientation.
-        The circles describe the angle with the $[\bar{1}\bar{1}\bar{1}]$ direction from \ang{0} (center) to \ang{90} (outer-ring).
+        The circles describe the angle with the $[\bar{1}\bar{1}\bar{1}]$ direction from \ang{0} (centre) to \ang{90} (outer-ring).
     }
     \label{fig:StereoBottom}
 \end{figure}
@@ -157,13 +157,13 @@ In fig. \ref{fig:StereoBottom} is presented the stereographic projection perpend
 In the frame of this thesis, the problem of facet identification was often encountered when facets were either too small to be resolved by the recognition algorithm, or when the uncertainty in the direction of the normal to the smallest facets is too important to be certain of the facet type.
 For example, the area in orange in fig. \ref{fig:StereoBottom} represents a region in which facets with different structures have a similar orientation and for which it can be complicated to make the difference between $[\bar{1}\bar{1}1]$, $[\bar{2}\bar{2}1]$ and $[\bar{3}\bar{3}1]$ facets.
 
-In this study, facets around the nanoparticle interface with the substrate have been identified as the smallest on the nanoparticle surface and the most subject to structural evolutions.
+In this study, facets around the nanoparticle interface with the substrate have been identified as the smallest on the nanoparticle surface and the most subject to structural evolution.
 The orientation of all the facets present of the nanoparticle was performed in real space by the use of \textit{FacetAnalyser} taking into account the expected symmetry of the nanoparticle.
 
 % 150 -> 150
 After the flash annealing, the nanoparticle shape near the interface has become less round and more faceted from the disappearance of the defect, the surface strain between the interface and the particle has practically disappeared, a [$10\bar{1}$] facet appeared on the side of the nanoparticle near a [2$\bar{1}\bar{2}$] facet that replaced a [1$\bar{1}\bar{1}$] facet (fig. \ref{fig:AmaterasuDefect}).
 A [$\bar{2}\bar{1}2$] facet is still present on the other side of the particle.
-The total surface area occupied by the [$\bar{1}\bar{1}\bar{1}$] facet, ($1\bar{1}1$)-type and (100)-type facets has increased (fig. \ref{fig:AmaterasuFacetsEvolution} - a), the removal of the defect directly increasing the amount of voxels in the neighbouring facets (fig. \ref{fig:AmaterasuDefect}), \textit{i.e.} almost \qty{10}{\percent} more of the sample surface was recognized as part of the different facets by the algorithm.
+The total surface area occupied by the [$\bar{1}\bar{1}\bar{1}$] facet, ($1\bar{1}1$)-type and (100)-type facets has increased (fig. \ref{fig:AmaterasuFacetsEvolution} - a), the removal of the defect directly increasing the amount of voxels in the neighbouring facets (fig. \ref{fig:AmaterasuDefect}), \textit{i.e.} almost \qty{10}{\percent} more of the sample surface was recognised as part of the different facets by the algorithm.
 
 \begin{figure}[!htb]
     \centering
@@ -171,7 +171,7 @@ The total surface area occupied by the [$\bar{1}\bar{1}\bar{1}$] facet, ($1\bar{
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_01/paraview/WireframeStrain1483.png}
     \caption{
         The dislocation results in a large volume of the particle that is not visible, due to the large strains \textcolor{Important}{Better explain this}.
-        Removing the dislocation increase the area of the particle that is then recognized as facets, especially for the $[\bar{1}\bar{1}\bar{1}]$ facet, at the interface with the substrate.
+        Removing the dislocation increase the area of the particle that is then recognised as facets, especially for the $[\bar{1}\bar{1}\bar{1}]$ facet, at the interface with the substrate.
     }
     \label{fig:AmaterasuDefect}
 \end{figure}
@@ -181,11 +181,11 @@ When heating from \qty{150}{\degreeCelsius} to \qty{250}{\degreeCelsius} , the [
 When heating to \qty{350}{\degreeCelsius}, the [$10\bar{1}$] facet disappeared and a [$\bar{1}01$] facet appeared on the opposite side of the particle, this transformation is visible in fig. \ref{fig:AmaterasuA}.
 If one expects a certain degree of symmetry from the equilibrium Winterbottom shape of a particle on a substrate \parencite{WINTERBOTTOM1967, Boukouvala2021}, this symmetry seems to only be reached at \qty{450}{\degreeCelsius} with three [$\bar{1}1\bar{1}$], [1$\bar{1}\bar{1}$] and [$\bar{1}\bar{1}$1] facets around the substrate for a total of 11 facets, which is also the only reconstruction without any ($\bar{2}\bar{1}2$), ($\bar{1}01$) and ($2\bar{1}\bar{1}$)-type facets (fig. \ref{fig:AmaterasuFacetsEvolution}).
 
-Overall, the surface occupied by the facets around the top of the particle increase with heating, while the surface area that is not recognized as faceted by the algorithm decreases, the respective number of each \{$1\bar{1}1$\}, \{100\}-type facet does not change during the experiment.
+Overall, the surface occupied by the facets around the top of the particle increase with heating, while the surface area that is not recognised as faceted by the algorithm decreases, the respective number of each \{$1\bar{1}1$\}, \{100\}-type facet does not change during the experiment.
 % was multipied by \qty{50}{\percent} between \qty{25}{\degreeCelsius} and \qty{450}{\degreeCelsius}, which is also the temperature at which most of the particle surface was recognized as faceted (fig. \ref{fig:AmaterasuFacetsEvolution}).
 The facets that are around the bottom of the particle are the most subject to change during this temperature ramp while the facets at the top of particle are more stable (fig. \ref{fig:AmaterasuFacetsEvolution}).
 It is possible that due to the low imaging resolution of the experiment, smaller facets that exist on the particle surface cannot be distinguished.
-Indeed, fig. \ref{fig:AmaterasuFacetsEvolution} shows that the total surface area not recognized as facets from the algorithm is always near \qty{40}{\percent}.
+Indeed, fig. \ref{fig:AmaterasuFacetsEvolution} shows that the total surface area not recognised as facets from the algorithm is always near \qty{40}{\percent}.
 
 \begin{figure}[!htb]
     \centering
@@ -193,7 +193,7 @@ Indeed, fig. \ref{fig:AmaterasuFacetsEvolution} shows that the total surface are
     \caption{
         a) Evolution of the number of facet near the bottom (interface with the substrate) of the particle.
         b) Evolution of the particle surface area occupied by specific facets (indicated with []) or facet families (indicated with \{\}).
-        The surface not recognized as part of a facet by the algorithm (e.g. rough areas of the particle surface, edges and corners) is taken into account and shown in black.
+        The surface not recognised as part of a facet by the algorithm (e.g. rough areas of the particle surface, edges and corners) is taken into account and shown in black.
     }
     \label{fig:AmaterasuFacetsEvolution}
 \end{figure}
@@ -204,7 +204,7 @@ The increase of temperature could have been the trigger of thermally-induced mob
 \textcolor{Important}{find citations here}
 
 A reconstruction at \qty{600}{\degreeCelsius} shows the appearance of a defect at the interface with the substrate (fig. \ref{fig:AmaterasuB}), and the appearance of a [$\bar{2}\bar{1}2$] facet that was present on the nanoparticle at \qty{150}{\degreeCelsius} before the removal of the defect (fig. \ref{fig:Amaterasu110}).
-After the introduction of \ammonia at \qty{600}{\degreeCelsius}, the reconstruction of the particle shows the appearance of a [2$\bar{1}\bar{1}$] facet for the first time, together with the appearance of a [$\bar{1}01$] facet and the disappearance of the [$\bar{2}\bar{1}2$] facet, similarily to the changes that occured at \qty{150}{\degreeCelsius} after the removal of the defect (fig. \ref{fig:Amaterasu110}).
+After the introduction of \ammonia at \qty{600}{\degreeCelsius}, the reconstruction of the particle shows the appearance of a [2$\bar{1}\bar{1}$] facet for the first time, together with the appearance of a [$\bar{1}01$] facet and the disappearance of the [$\bar{2}\bar{1}2$] facet, similarly to the changes that occurred at \qty{150}{\degreeCelsius} after the removal of the defect (fig. \ref{fig:Amaterasu110}).
 The change is also visible in fig. \ref{fig:AmaterasuFacetsEvolution}, for example the relative surface occupied by the \{100\}-type facets decreases, occupied by the [$\bar{1}01$] facet.
 
 \begin{figure}[!htb]
@@ -289,7 +289,7 @@ Our approach to the strain is considerably simplified since we can only correctl
 \subsubsection{Homogeneous strain}
 
 The deviation of the interplanar spacing from the room temperature value due to the thermal expansion of the crystal is expected to be homogeneous within the particle.
-This isotropic \textit{homogeneous} strain ($\epsilon_{hmg}$) in the particle is removed by centering the Bragg peak before phase retrieval, otherwise resulting in a linear phase ramp \parencite{}.
+This isotropic \textit{homogeneous} strain ($\epsilon_{hmg}$) in the particle is removed by centring the Bragg peak before phase retrieval, otherwise resulting in a linear phase ramp \parencite{}.
 It is of utmost important to study the evolution of the material first under an inert atmosphere to see if there is an evolution of the homogeneous strain not only due to the thermal expansion of the crystal, but also to global relaxation phenomena induced e.g. by the adsorption of molecules involved in the catalytic reaction.
 
 % \begin{figure}[!htb]
@@ -306,8 +306,8 @@ It is of utmost important to study the evolution of the material first under an 
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS\_2021\_01/RockingCurves.pdf}
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS\_2021\_01/HomoStrain.pdf}
     \caption{
-        a) Evolution of the integrated scattered intensity in the detector as a function of the scattering angle during the rocking scans, fitted (b) with a lorentzian profile to retrieve the peak positions and full width at half maxima (FWHM).
-        Evolution of the $d_{111}$ interplanar spacing (c), and associated homogenous strain values as a function of the temperature.
+        a) Evolution of the integrated scattered intensity in the detector as a function of the scattering angle during the rocking scans, fitted (b) with a Lorentzian profile to retrieve the peak positions and full width at half maxima (FWHM).
+        Evolution of the $d_{111}$ interplanar spacing (c), and associated homogeneous strain values as a function of the temperature.
         The reference for the computation of homogeneous strain is taken at \qty{25}{\degreeCelsius}.
         Evolution of the Bragg peak FWHM as a function of the temperature (d).
         \textcolor{Important}{Errorbars}
@@ -366,13 +366,13 @@ To be more precise, the angular value is computed as the average of the angle be
 \end{figure}
 
 % introduce in plane out of plane
-It is important to realize that the displacement observed is \textit{only} in the [111] direction, sensitive to deviations of the crystal structure perpendicular to the [111] and [$\bar{1}\bar{1}\bar{1}$] facets, but parallel to [$\bar{1}$10]-type facets, themselves perpendicular to the [111] direction (fig. \ref{fig:StereoBottom}).
+It is important to realise that the displacement observed is \textit{only} in the [111] direction, sensitive to deviations of the crystal structure perpendicular to the [111] and [$\bar{1}\bar{1}\bar{1}$] facets, but parallel to [$\bar{1}$10]-type facets, themselves perpendicular to the [111] direction (fig. \ref{fig:StereoBottom}).
 On one hand, if there existed an out-of-plane displacement of the atoms on [$\bar{1}$10]-type facets, \textit{i.e.} in the direction perpendicular to the [$\bar{1}$10] planes, its contribution to the displacement field observed in this experiment would not be directly visible.
 On the other hand, the in-plane displacement of the atoms on [$\bar{1}$10]-type facets is visible, whereas the in-plane displacement on the [111] and [$\bar{1}\bar{1}\bar{1}$] facets is not visible.
 
 The $\epsilon_{zz}$ component of the strain tensor on the [111] and [$\bar{1}\bar{1}\bar{1}$] facets is easily assimilated to variation of the interplanar spacing $d_{111}$ (positive strain is tensile strain, negative strain is compressive).
 However, the physical meaning of the strain becomes more complex when observing facets that are neither parallel nor perpendicular to the [111] direction, such as [$1\bar{1}1$]-type or \{100\} facets.
-For this reason, the following analysis of the heterogeneous strain is meant to be qualitative, by comapring the strain evolution of the same facets at different conditions but not between different facets, a quantitative analysis could only be performed with the full strain tensor.
+For this reason, the following analysis of the heterogeneous strain is meant to be qualitative, by comparing the strain evolution of the same facets at different conditions but not between different facets, a quantitative analysis could only be performed with the full strain tensor.
 % The relation between in-plane and out-of-plane strain can be rationalized by the Poisson effect \parencite{Atlan2023}, which relates an in-plane tensile (compressive) strain to an out-of-plane compressive (tensile) strain (depending on the origin of the displacement field).
 
 The values of the strain are in general quite low, always below \qty{0.1}{\percent}, while the highest value of the displacement field on the particle facets is of about \qty{1}{\angstrom} (app. \ref{fig:AmaterasuDisplacement}).
@@ -380,7 +380,7 @@ It is difficult to be certain of the maximum value of the displacement due to so
 Let's take the example of the particle at \qty{600}{\degreeCelsius} under Argon flow, the magnitude of the scattering vector at the position of the Bragg peak is $|\vec{G}| \qty{\approx 2.772}{\angstrom}$.
 The magnitude of the scattering vector probed furthest from the Bragg peak during the measurement is along the [111] crystal truncation rod, $|\vec{q}| \qty{\approx 2.742}{\angstrom}$.
 We have $\delta q = \qty{0.03}{\angstrom}$ which gives $(\vec{q}-\vec{G}).\vec{u} = 0.03 <<1$, which puts us far away from the BCDI limit discussed in sec. \ref{sec:StrainBCDI}.
-\textcolor{Important}{Add a figure with orthogonalized data}
+\textcolor{Important}{Add a figure with orthogonalised data}
 
 % Decribe removal of defect strain evolution 150°C -> 150 °C
 The very large standard deviations seen in fig. \ref{fig:AmaterasuStrain} at \qty{150}{\degreeCelsius} for the [$\bar{1}\bar{1}\bar{1}$], [$\bar{1}1\bar{1}$], [$1\bar{1}\bar{1}$] and [$11\bar{1}$] facets can be explained by the presence of the defect, around which the phase was not well unwrapped as seen in fig. \ref{fig:AmaterasuDefect}.
@@ -415,18 +415,18 @@ Both facets perpendicular to the [111] direction, [2$\bar{1}\bar{1}$] and [$\bar
 \end{figure}
 
 The alternating highly positive and negative strain regions in the middle of the [$\bar{1}\bar{1}\bar{1}$] facet (fig. \ref{fig:AmaterasuB}) is the signature of a dislocation network forming in the interface with the substrate \parencite{Dupraz2015}, also responsible for the high strain standard deviation of this facet (fig. \ref{fig:AmaterasuStrain}).
-A higher resolution in a 3D displacement field together with simulations of the impact of defect at the interface are needed to fully characterized this network, which is outside the scope of this thesis.
+A higher resolution in a 3D displacement field together with simulations of the impact of defect at the interface are needed to fully characterised this network, which is outside the scope of this thesis.
 
 On fig. \ref{fig:AmaterasuStrain1675} we can observe that the three \{100\}-type facets have the same strain values, none of which have the same environment (fig. \ref{fig:AmaterasuStrain1675}), while the edges and corners around the [111] and \{100\} facet show a slightly positive strain.
 
 At first sight, all facets that have a similar orientation show a similar strain (e.g. [1$\bar{1}$1]-type, \{100\}-type).
 However, the two \{111\} facets that are close to the substrate do not show the same strain than the three \{111\} facets closer to the top of the particle.
-The strain being in the [111] direction with the origin of the displacement field in the center of the particle, if all of these facet had experienced the same compressive (tensile) strain perpendicular to their surface \textit{via} the adsorption of ammonia, they would all show a negative (positive) strain (of lower amplitude due to the angle between these facets and the [111] direction).
+The strain being in the [111] direction with the origin of the displacement field in the centre of the particle, if all of these facet had experienced the same compressive (tensile) strain perpendicular to their surface \textit{via} the adsorption of ammonia, they would all show a negative (positive) strain (of lower amplitude due to the angle between these facets and the [111] direction).
 
-This behaviour could be linked to a strong effect of the support which has the dual effect of first preventing the [$\bar{1}\bar{1}\bar{1}$] facet from being exposed and secondly forcing them to accomodate the strain linked to the substrate.
+This behaviour could be linked to a strong effect of the support which has the dual effect of first preventing the [$\bar{1}\bar{1}\bar{1}$] facet from being exposed and secondly forcing them to accommodate the strain linked to the substrate.
 There are three possibilities, first ammonia is effectively adsorbed on these facets but the influence of the substrate hides a possible common signature in the strain.
 Secondly ammonia is not adsorbed and the strain difference is due to the influence of the substrate on the particle structure.
-Thirdly, ammonia is adsorbed but only on the three top facets or only on the 2 bottom facets due to the influence of the substrate that either limitates or facilitates the adsorption process.
+Thirdly, ammonia is adsorbed but only on the three top facets or only on the 2 bottom facets due to the influence of the substrate that either limits or facilitates the adsorption process.
 
 % Globally, the top of the particle seems to be in compression along $\vec{z}$ (fig. \ref{fig:Amaterasu}, \ref{fig:AmaterasuStrainSlices}), whereas the bottom of the particle is in tension, with the exception of the one [$1\bar{1}3$] facet (fig. \ref{fig:AmaterasuStrainSlices}) which is in compression.
 
@@ -443,7 +443,7 @@ Thirdly, ammonia is adsorbed but only on the three top facets or only on the 2 b
 Overall, it is difficult to conclude on any potential effect of the absorption of ammonia on the particle due to the presence of the dislocation network at the interface for which it is unclear whether or not it's origin if due to the adsorption of ammonia or from interfacial strain.
 The fact that we only possess one component of the strain tensor, makes it difficult to quantify any relaxation effect on the facets that are not perpendicular to the [111] direction.
 Bragg peaks from the substrate could have been measured to have a better idea of the interfacial structure.
-Additionnal simulations of the particle equilibrium shape and the impact if interfacial defects are needed to have a better understanding of the structural dynamics at work.
+Additional simulations of the particle equilibrium shape and the impact if interfacial defects are needed to have a better understanding of the structural dynamics at work.
 
 % The shape of the particle in the ($\vec{x}, \vec{y}$) plane at \qty{600}{\degreeCelsius} can be roughly approximated as a hexagon with 3 sides occupied by the [$\bar{1}11$], [$1\bar{1}1$] and [$11\bar{1}$] facets.
 % The three other sides are occupied by the [100], [010], [001] facets near the top of the particle, under which are situated either 1) one large [$\bar{1}10$] facet, 2) one small [$1\bar{1}0$] facet under which in turn are two smalls [113] and [$\bar{1}1\bar{1}$] facets, 3) a large [$1\bar{1}\bar{1}$] facet.
