--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -7,8 +7,8 @@ The instrumental procedure is very time-consuming, especially at the SixS beamli
 The recent improvement of the instrumental setup (rocking curves performed in Fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction since, as was demonstrated in this study, BCDI is of little use if one does not have the time to measure multiple reflections during an experiment.
 The planned upgrade of SOLEIL to a $4^{th}$ generation synchrotron will also play a key role in the hierarchy of SixS in the very competitive list of coherent imaging beamlines, the current resolution of the experiment being too low to properly resolve the smallest facets present of the particles, to distinguish between facets with similar orientations,to observe the growth of surface oxides or the strain in the topmost atomic layers.
 
-Nevertheless, we have successfully measured the evolution of Pt nanoparticles during a temperature ramp from \qty{25}{\degreeCelsius} to \qty{600}{\degreeCelsius} in which the reshaping of the particles as a function of temperature was put into evidence, with the apperance of dislocation loops and facets, together with the importance of the presence of a substrate on the displacement field.
-The importance of probing different nanoparticles before drawing a conclusion to their global behaviour was also put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \argon and \ammonia.
+Nevertheless, we have successfully measured the evolution of Pt nanoparticles during a temperature ramp from \qty{25}{\degreeCelsius} to \qty{600}{\degreeCelsius} in which the reshaping of the particles as a function of temperature was put into evidence, with the appearance of dislocation loops and facets, together with the importance of the presence of a substrate on the displacement field.
+The importance of probing different nanoparticles before drawing a conclusion to their global behaviour was also put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
 The role of different facets in the stability of the particle was shown.
 
-An upgraded beamline could allow future BCDI studies of the oxidation of ammonia, revealing the 3D structural dynamics of the hysteresis cycle identified on single crystal by \cite{Resta2020a}, or give additionnal detail regarding the presence of surface oxides on specfic facets, as seen in the next chapter.
+An upgraded beamline could allow future BCDI studies of the oxidation of ammonia, revealing the 3D structural dynamics of the hysteresis cycle identified on single crystal by \cite{Resta2020a}, or give additional detail regarding the presence of surface oxides on specific facets, as seen in the next chapter.
