--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -1,28 +1,28 @@
 \section{Introduction}
 
-Bimetallic nanomaterials have raised more and more significant interest from worldwide researchers in recent years, their new physical and chemical properties deriving from synergistic effects between the two metals being highly desirable for catalytic applications.
+Bimetallic nanomaterials have raised more and more significant interest from worldwide researchers, their new physical and chemical properties deriving from synergistic effects between the two metals being highly desirable for catalytic applications.
 For example, bimetallic catalysts consisting either of two noble metals (Pt-Rh, Au-Pd) or a noble and a 3d/4d transition metal (e.g. Pt-Cu) can show tremendously higher catalytic activities and altered selectivity in both conventional thermal and electrochemical catalysis \parencite{Resta2020a, Carnis2021b}.
 
-In the case of the oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \nitricoxide, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was first added to the catalyst \parencite{Handforth1934, Heck1982}.
+In the case of the oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \ce{NO}, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was first added to the catalyst \parencite{Handforth1934, Heck1982}.
 Recently, the ammonia oxidation reaction over a Pt-Rh binary alloy was studied with a surface science approach by operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) combined with mass spectrometry \parencite{Resta2020a}.
-It was shown that \nitricoxide production coincides with significant changes of the surface structure and the formation of a \ce{RhO_2} surface oxide.
+It was shown that \ce{NO} production coincides with significant changes of the surface structure and the formation of a \ce{RhO_2} surface oxide.
 Moreover, changes in the surface relaxation related to the catalyst selectivity as well as the presence of an hysteresis cycle in the reaction were reported.
 
 Recent studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
 However, these more conventional techniques traditionally provide ensemble-averaged properties when studying nanoparticles.
 With Bragg coherent diffraction imaging (BCDI), we intend to address under \textit{in situ} and \textit{operando} conditions the individual three-dimensional (3D) structural response of an isolated nanoparticle to changes in gas mixtures, enabling us to probe more deeply the details of catalytic phenomena \parencite{Fernandez2019, Passos2020, Dupraz2022}.
 Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles.
-A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, refaceting, support, interaction, oxide formation, etc) in 3D is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
+A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, re-faceting, support, interaction, oxide formation, etc) in 3D is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
 
-\subsection{Synthetizing platinum nanoparticle}\label{sec:PtParticles}
+\subsection{Synthesising platinum nanoparticle}\label{sec:PtParticles}
 
-The platinum nanoparticles were synthetized thanks to a collaboration with the Israel Institute of Technology (Technion) \parencite{Dupraz2017}.
+The platinum nanoparticles were synthesised thanks to a collaboration with the Israel Institute of Technology (Technion) \parencite{Dupraz2017}.
 A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a [001] oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate.
 The Pt nanocrystals have their c-axis oriented along the [111] direction normal to the [001] sapphire substrate.
 A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transforms to nanoparticles that are between 100 and 1000 nm large, epitaxied on the substrate surface.
 The application of a patterned mask during the lithographic process yields a patterned sample with isolated nanoparticles in the middle of \qty{100}{\um} large squares, visible in fig. \ref{fig:Mask}.
 
-The position of the squares is designated with arabic numbers (row), letters (column) and roman numbers (large rectangle).
+The position of the squares is designated with Arabic numbers (row), letters (column) and roman numbers (large rectangle).
 All of the position indicators are constituted of platinum nanoparticle as well, which allows the mapping of the sample's surface in Bragg condition to find the nanoparticles' positions (fig. \ref{fig:SampleMapping}).
 The hole diameter in the mask changes in different areas of the sample and has a direct impact on the average nanoparticle size.
 % The epitaxy relation between the nanoparticle and the substrate was explored in this section with in-plane diffraction measurements that show an average in-plane strain of \qty{1}{\percent}.
@@ -41,11 +41,11 @@ After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute},
 
 \subsection{Catalysis reactor calibration}
 
-The catalytic activity of the platinum nanoparticles as a function of the temperature was studied to be certain that the sample is sufficently catalytically active for the reaction products to be detected by the mass spectrometer.
-The catalytic activity of the reactor without any sample was also monitored and proven to be nul (sec. \ref{sec:SXRD100}), to make sure that no reaction occurs without the sample.
+The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
+Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the oxidation of ammonia.
 
-The heater temperature was first calibrated by measuring the temperature in the reactor at different pressures, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
-The experimental data points were then fit using a polynomial of degree four to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} (fig. \ref{fig:TempRamps} - b) when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \argon).
+The heater temperature was first calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
+The experimental data points were then fit using a polynomial of degree four to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
@@ -53,7 +53,7 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \centering
     \begin{tabular}{@{}llllllll@{}}
     \toprule
-     & \argon & \ammonia & \dioxygen & \nitricoxide & \nitrousoxide & \nitrogen & \water \\
+     & \ce{Ar} & \ce{NH_3} & \ce{O_2} & \ce{NO} & \ce{N_2O} & \ce{N_2}& \ce{H_2O} \\
     \midrule
     \qty{300}{\kelvin} & \num{17.7} & \num{25.1} & \num{26.5} & \num{25.9} & \num{17.4} & \num{26.0} & \num{18.6} \\
     \qty{400}{\kelvin} & \num{22.4} & \num{37.2} & \num{34.0} & \num{33.1} & \num{26.0} & \num{32.8} & \num{26.1} \\
@@ -65,56 +65,48 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \label{tab:ThermalConductivity}
 \end{table}
 
-Two temperature ramps at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - c, d) were carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, and \qty{1}{\ml\per\min} of \ammonia.
-The excess of oxygen compared to ammonia is expected to favour the production of \nitricoxide at high temperatures (sec. \ref{sec:AmoOxiHC}).
+A temperature ramp at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleCalibration.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleFit03bar.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp1.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
+    \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/ThermocoupleCalibration.pdf}
+    \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
     \caption{
-        a) Temperature inside the reactor cell measured with a type C thermocouple under vacuum and different \argon pressures.
-        b) Polynomial fit of the temperature as a function of the heater current.
-        Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, \qty{1}{\ml\per\min} of \ammonia) at a reactor pressure of \qty{0.3}{\bar} during increasing and decreasing (low transparency) temperature ramps to c) \qty{525}{\degreeCelsius} with 150 steps, each lasting \qty{10}{\second}, and d) to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
-        Oxygen is omitted for simplicity.
+        a) Temperature inside the reactor cell measured with a type C thermocouple under vacuum and different \ce{Ar} pressures.
+        b) Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}) at a reactor pressure of \qty{0.3}{\bar} during increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
+        The partial pressure of oxygen is omitted for simplicity.
     }
     \label{fig:TempRamps}
 \end{figure}
 
-The first temperature ramp to \qty{525}{\degreeCelsius} shows that the air present in the cell was not well extracted before reaching a temperature of \qty{300}{\degreeCelsius}, \qty{14}{\min} after starting heating.
-The pressure of \nitrogen and \water continuously decreasing until then.
-Above \qty{300}{\degreeCelsius}, the pressure of \nitrogen and \nitricoxide start to increase, with a slightly lower activation temperature for \nitrogen.
-No production of \nitrousoxide can be detected during this temperature ramp.
-
-A second temperature ramp was carried out to \qty{650}{\degreeCelsius} to see if the the activation temperature for the production of \nitrousoxide could be achieved.
-The partial pressure of each reaction product is lower at the beginning of the temperature ramp which shows that the remaining air was well extracted.
-The activation temperature for the production of \nitrogen can be more easily identified to be around \qty{300}{\degreeCelsius} and near \qty{450}{\degreeCelsius} for \nitricoxide, which is in accord with the data from the first temperature ramp.
-
-However, the activation temperature for \nitrousoxide in the second temperature ramp is at about \qty{450}{\degreeCelsius}, a temperature that was reached during the first temperature ramp as well, but without the detection of \nitrousoxide.
-This could be linked to either an activation process of the catalyst during the first temperature ramp that lowers the activation temperature for the production of nitrous oxide in the second temperature ramp, or more probably to a very low signal to noise ratio that hides the evolution of the partial pressure due to the remaining air in the reactor, the partial pressure on \nitrousoxide being the lowest of all the detected gases.
+The catalyst light off temperatures for the production of \ce{N_2}, \ce{NO} and \ce{N_2O} can respectively be identified to be around \qty{300}{\degreeCelsius}, \qty{450}{\degreeCelsius}, and \qty{550}{\degreeCelsius}.
+The excess of oxygen compared to ammonia increases the production of \ce{NO} at high temperatures, with a partial pressure similar to the partial pressure of nitrogen at \qty{650}{\degreeCelsius}.
+No decrease of the nitrogen partial pressure can yet be detected as a function of the increasing temperature.
+The production of nitrous oxide stays a low values during the temperature ramp, almost imperceptible from the background pressure.
 
 According to these primary results, the study of the oxidation of ammonia with BCDI was originally decided to be carried out at \qtylist{300;500;600}{\degreeCelsius}, temperatures before and after the catalyst light off (tab. \ref{tab:ConditionsNanoparticles}).
 
 \begin{table}[!htb]
-    \centering
-    %\resizebox{\textwidth}{!}{%
-    \begin{tabular}{@{}cclc@{}}
+\centering
+\resizebox{\textwidth}{!}{%
+    \begin{tabular}{@{}lll|l|lll|l@{}}
     \toprule
-    \multicolumn{3}{c}{Gas flow (\unit{\ml\per\min})} & Targeted information \\
-    \multicolumn{1}{l}{\argon} & \multicolumn{1}{l}{\ammonia} & \dioxygen & \multicolumn{1}{l}{} \\
+    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
     \midrule
-    50 & 0 & 0 & Catalyst state without reactants (unactive) \\
-    49 & 1 & 0 & \ammonia introduction influence \\
-    48.5 & 1 & 0.5 & \multirow{4}{*}{\begin{tabular}[c]{@{}c@{}}Influence of \ammonia / \dioxygen ratio as a function\\ of the temperature and vice-versa\end{tabular}} \\
-    48 & 1 & 1 &  \\
-    47 & 1 & 2 &  \\
-    41 & 1 & 8 &  \\
-    50 & 0 & 0 & Returning to an inert atmosphere \\
+    \midrule
+    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
+    \midrule
+    \midrule
+    50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
+    48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
+    48 & 1 & 1 & 500 & 480 & 10 & 10 &  \\
+    47 & 2 & 1 & 500 & 470 & 20 & 10 &  \\
+    41 & 8 & 1 & 500 & 410 & 80 & 10 & \\
+    50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
     \bottomrule
     \end{tabular}%
-    %}
-    \caption{}
-    \label{tab:ConditionsNanoparticles}
+}
+\caption{Different atmospheres used to probe the ammonia oxidation on Pt nanoparticles with BCDI.}
+\label{tab:ConditionsNanoparticles}
 \end{table}
