--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -15,7 +15,7 @@ The out-of-plane vector $\vec{c}_{(100)}$ is perpendicular to the (100) plane, a
     \centering
     \includegraphics[trim=0 2cm 0 2cm, clip, width=0.70\textwidth]{/home/david/Documents/PhD/Figures/introduction/100.pdf}
     \caption{
-        Face-centered cubic unit cell of Pt with $(100)$ crystallographic plane drawn in green.
+        Face-entered cubic unit cell of Pt with $(100)$ crystallographic plane drawn in green.
         $\vec{a}_{(100)}$, $\vec{b}_{(100)}$ and $\vec{c}_{(100)}$ are the $(100)$ surface unit cell vectors.
     }
     \label{fig:SurfaceUnitCellPt100}
@@ -27,7 +27,7 @@ Reciprocal space maps were collected using the same experimental setup and at th
 The total pressure is always kept to \qty{500}{\milli\bar}.
 Considering the square symmetry in the position of the Bragg peaks, the in-plane reciprocal space maps were collected by rotating the in-plane sample and detector angles ($\omega$ and $\gamma$) from \ang{0} to \ang{90} to collect a quarter of the reciprocal space in the ($\vec{q}_x$, $\vec{q}_y$) plane
 
-The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space to visualize the arrangement of surface structures or surface relaxations in comparison with the structure of the Pt atoms on the (100) surface, the $h$ and $k$ values being computed using the square surface unit cell of the Pt (100) surface.
+The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space to visualise the arrangement of surface structures or surface relaxations in comparison with the structure of the Pt atoms on the (100) surface, the $h$ and $k$ values being computed using the square surface unit cell of the Pt (100) surface.
 
 \begin{figure}[!htb]
     \centering
@@ -44,7 +44,7 @@ The (200), (1$\bar{1}$0) and (0$\bar{2}$0) Bragg peaks can be observed, together
 
 Two different types of peaks can be observed under \qty{80}{\milli\bar} of oxygen, identified by red and green circles in fig. \ref{fig:MapsPt100A}.
 The red peaks are situated at intermediate positions in reciprocal space in comparison with the Pt (100) lattice (H, K) = (1, $\bar{0.5}$), (H, K) = (1, $\bar{1.5}$), (H, K) = (0.5, $\bar{1}$) and (H, K) = (0.5, $\bar{1.5}$).
-The green peaks are slighty shifted from the red peaks by the same amount $\delta = 0.07$ in either H or K.
+The green peaks are slightly shifted from the red peaks by the same amount $\delta = 0.07$ in either H or K.
 
 Four consecutive out-of-plane measurements were performed perpendicular to four peaks, two of each type, up to $L=3.5$ to probe the related out-of-plane structure.
 The background-subtracted intensity was integrated as a function of $L$ using the \textit{fitaid} module of \textit{binoculars} (fig. \ref{fig:LScansHighOxygenPt100}).
@@ -53,7 +53,7 @@ The background-subtracted intensity was integrated as a function of $L$ using th
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_high_oxygen_no_map.pdf}
     \caption{
-        Out-of plane measurements for four different positions under \qty{80}{\milli\bar} of \dioxygen, and \qty{420}{\milli\bar} of \argon.
+        Out-of plane measurements for four different positions under \qty{80}{\milli\bar} of \ce{O_2}, and \qty{420}{\milli\bar} of \ce{Ar}.
     }
     \label{fig:LScansHighOxygenPt100}
 \end{figure}
@@ -76,7 +76,7 @@ Corresponding interplanar spacings were computed from the position of the peaks,
     \label{fig:FitPt100LScans}
 \end{figure}
 
-Bulk \ce{Pt_3O_4} was reported to crystallize in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, MULLER1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
+Bulk \ce{Pt_3O_4} was reported to crystallise in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, MULLER1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
 The 3D structure of bulk \ce{Pt_3O_4} is presented in fig. \ref{fig:Pt3O4}.
 It is not yet clear why the (212) and (232) peaks are missing from the out-of-plane measurements.
 
@@ -108,7 +108,7 @@ For bulk \ce{Pt_3O_4} this would correspond to approximately 11 unit cells.
 \end{figure}
 
 Introducing ammonia in the reactor has resulted in the loss of contact with the sample heater, from the corrosion of the screws responsible for the contact on the sample holder.
-Nevertheless, half of the large reciprocal space could be measured prior to the loss of alignement (fig. \ref{fig:MapsPt100B}), in which the red circled peaks corresponding to \ce{Pt_3O_4} are still visible, the two other peaks that could have been measured at (0.93, -0.5) and (0.5, -0.93) have disappeared.
+Nevertheless, half of the large reciprocal space could be measured prior to the loss of alignment (fig. \ref{fig:MapsPt100B}), in which the red circled peaks corresponding to \ce{Pt_3O_4} are still visible, the two other peaks that could have been measured at (0.93, -0.5) and (0.5, -0.93) have disappeared.
 The sample was removed and cleaned to fix the sample heater, and then introduced in the reactor.
 In order to probe for the reproducibility of the \ce{Pt_3O_4} growth on the surface, the partial pressure of oxygen was set to \qty{80}{\milli\bar} again, while measuring a small area of the reciprocal space to detect the same peaks as in fig. \ref{fig:MapsPt100A}.
 The same peaks could indeed be detected as shown in fig. \ref{fig:MapsPt100B} but with a shift between the green and red circled peaks equal to $0.09$, more important than the previously measured value of $0.07$.
@@ -122,7 +122,7 @@ Interestingly, a different behaviour was measured during the following reciproca
     \includegraphics[width=0.39\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_high_oxygen_ammonia_no_map.pdf}
     \caption{
         Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
-        Out-of plane measurements for four different positions under \qty{80}{\milli\bar} of \dioxygen, \qty{10}{\milli\bar} of \ammonia, and \qty{410}{\milli\bar} of \argon.
+        Out-of plane measurements for four different positions under \qty{80}{\milli\bar} of \ce{O_2}, \qty{10}{\milli\bar} of \ce{NH_3}, and \qty{410}{\milli\bar} of \ce{Ar}.
     }
     \label{fig:MapsAndLScansPt100HighOxAmmonia}
 \end{figure}
@@ -134,8 +134,8 @@ The peaks measured earlier perpendicular to (H, K) = (0.5, -1) at $L=0.7$, $L=1.
 
 It is not certain that bulk \ce{Pt_3O_4} was present on the catalyst surface at the beginning of the reacting conditions.
 Indeed, the sample was exposed to \qty{80}{\milli\bar} of oxygen for \qty{12}{\hour} when the bulk oxide could be measured.
-The second exposition only lasted for \qty{1}{\hour}, during which the same in-plane could effectively be measured, but without out-of-plane informations.
-Therefore it is not clear wether the lack of bulk oxide is due to its removal from the reacting conditions or from the shorter exposition to a high oxygen atmosphere.
+The second exposition only lasted for \qty{1}{\hour}, during which the same in-plane could effectively be measured, but without out-of-plane information.
+Therefore it is not clear whether the lack of bulk oxide is due to its removal from the reacting conditions or from the shorter exposition to a high oxygen atmosphere.
 However, it is clear that the duration of the high oxygen condition, probably linked to the thickness of the \ce{Pt_3O_4} layer, has an effect on the catalyst surface during reaction condition since the in-plane signals measured after the introduction of ammonia are very different.
 Regarding the $L$-scan at (H, K) = (1.9, 0), the two peaks near $L=0.1$ and $L=2.1$ are coming from the nearby Bragg peaks.
 Otherwise, no structures signal in $L$ can be observed.
@@ -143,7 +143,7 @@ Otherwise, no structures signal in $L$ can be observed.
 \ce{Pt_3O_4} has been proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
 In the current experiment, the heater problem prevented us from recording the evolution of the reaction products during the first exposition of the catalyst to the reacting conditions.
 Additional measurements with first different exposition times to a pure oxygen atmosphere (while monitoring the thickness of the \ce{Pt_3O_4} layer), and secondly introducing ammonia in the reactor while comparing the product partial pressure could bring an answer to the role of \ce{Pt_3O_4} during the oxidation of ammonia.
-It is possible that the (10x10)-type reconstructions observed in the current experimebt are linked to the adsorption of nitrogen species on the catalyst surface.
+It is possible that the (10x10)-type reconstructions observed in the current experiment are linked to the adsorption of nitrogen species on the catalyst surface.
 
 \begin{figure}[!htb]
     \centering
@@ -151,7 +151,7 @@ It is possible that the (10x10)-type reconstructions observed in the current exp
     \includegraphics[width=0.39\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/l_scans_low_oxygen_ammonia.pdf}
     \caption{
         Reciprocal space maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the surface lattice of Pt (100).
-        Out-of plane measurements for four different positions under \qty{5}{\milli\bar} of \dioxygen, \qty{10}{\milli\bar} of \ammonia, and \qty{485}{\milli\bar} of \argon.
+        Out-of plane measurements for four different positions under \qty{5}{\milli\bar} of \ce{O_2}, \qty{10}{\milli\bar} of \ce{NH_3}, and \qty{485}{\milli\bar} of \ce{Ar}.
     }
     \label{fig:MapsAndLScansPt100LowOxAmmonia}
 \end{figure}
@@ -159,10 +159,10 @@ It is possible that the (10x10)-type reconstructions observed in the current exp
 Lowering the partial pressure of oxygen from \qty{80}{\milli\bar} to \qty{5}{\milli\bar} in the reactor has completely removed the square (10x10) reconstruction phenomena and revealed the existence of two hexagonal arrangements on top on the Pt (100) surface (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}), with an in-plane lattice parameter equal to \qty{2.685}{\angstrom}, \qty{\approx 3.36}{\percent} lower than the distance between neighbouring Pt atoms on the Pt (100) surface.
 Second order peaks can also be seen at the edge of the reciprocal space map, each domain has one axis parallel to either $\vec{a}_{(100)}$ or $\vec{b}_{(100)}$, \textit{i.e.} respectively in the [110] and [1-10] directions.
 
-Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarized in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, VANHOVE1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
+Different hexagonal surface reconstructions on the Pt (100) surface have been reported also in the [110] direction at UHV conditions, summarised in \cite{Hammer2016}, based on an important body of work \parencite{Heilmann1979, VANHOVE1981, Heinz1982, Mase1992, Kuhnke1992, Borg1994, VanBeurden2004, Havu2010}, evolving to rotated hexagonal reconstructions with angles between \ang{0.77} and \ang{0.94} depending on the sample temperature and on the previous temperature treatment.
 The unit cell describing those reconstructions with respect to the Pt (100) surface varies, if first contained to (5XN) where N = 20–30, the latest study reports a commensurate c(26X118) superstructure.
-Exposition of the rotated hexagonal structure to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) has been found to remove the hexagonal structure and precipate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}, a similar conclusion was reached by \cite{Deskins2005} by DFT studies.
-Exposition to \ce{NO} has been reported to stabilize the clean Pt (100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction, an oscillatory behaviour between a clean (1X1) surface and the rotated hexagonal reconstruction was reported by Cox \textit{et al.} \parencite*{Cox1983}.
+Exposition of the rotated hexagonal structure to oxygen at \qty{450}{\degreeCelsius} studied by low energy electron diffraction (LEED) has been found to remove the hexagonal structure and precipitate the growth of surface oxides \textit{via} different phases \parencite{BradleyShumbera2007, BradleyShumbera2007a}, a similar conclusion was reached by \cite{Deskins2005} by DFT studies.
+Exposition to \ce{NO} has been reported to stabilise the clean Pt (100) phase \parencite{Heinz1982}, while exposition to \ce{CO} removes the hexagonal reconstruction, an oscillatory behaviour between a clean (1X1) surface and the rotated hexagonal reconstruction was reported by Cox \textit{et al.} \parencite*{Cox1983}.
 
 A (2X2) reconstruction of the Pt (100) surface has been reported at an oxygen pressure of \qty{1e-3}{mbar} by the use of environmental TEM \parencite{Li2016}.
 
@@ -188,7 +188,7 @@ After removing oxygen from the reactor, only the first order reflections corresp
 To make sure that the hexagonal structure was related to the reaction conditions and not only to a lower pressure of oxygen in the reactor, a partial pressure of \qty{5}{\milli\bar} of oxygen was set.
 The following measurement showed the presence of many peaks that appeared in the first hour of the measurement.
 A second map was measured directly after the end of the first map, in which none of the newly detected peaks could be detected.
-These two measurements showed first that the hexagonal structure observed under reacting conditions with \qty{5}{\milli\bar} of oxygen is linked to the simulateanous presence of ammonia and oxygen in the reactor, and that the duration of some of the observed phenomena are too short to be effectively measured with the current time-resolution of in-plane reciprocal space maps.
+These two measurements showed first that the hexagonal structure observed under reacting conditions with \qty{5}{\milli\bar} of oxygen is linked to the simultaneous presence of ammonia and oxygen in the reactor, and that the duration of some of the observed phenomena are too short to be effectively measured with the current time-resolution of in-plane reciprocal space maps.
 
 \subsection{Surface roughness and surface relaxation effects}
 
@@ -204,9 +204,9 @@ These two measurements showed first that the hexagonal structure observed under 
 
 Crystal truncation rods have been measured perpendicularly to the ($\bar{1}\bar{1}0$), ($\bar{1}00$) and ($\bar{2}10$) positions \qty{6}{\hour} after the start of each condition, each measurement lasted for \qty{2}{\hour}.
 The background-subtracted intensity of the CTR was integrated using the \textit{fitaid} module of \textit{binoculars} as a function of $L$ with the same integration range.
-The CTR intensity is presented in fig. \ref{fig:CTRPt100}, additionnal peaks could be detected under exposition to \qty{80}{\milli\bar} of \dioxygen, which shows that bulk \ce{Pt_3O_4} is epitaxied on the Pt (100) surface.
+The CTR intensity is presented in fig. \ref{fig:CTRPt100}, additional peaks could be detected under exposition to \qty{80}{\milli\bar} of \ce{O_2}, which shows that bulk \ce{Pt_3O_4} is epitaxied on the Pt (100) surface.
 
-The presence of those peaks prevent us from resolving the minimal position of the CTR intensity, the absence of oscillations in the evolution of the CTR intensity as a function of $L$ also shows that we are not in the presence of a homogenous layer of \ce{Pt_3O_4}, but rather of many islands of different height covering the substrate.
+The presence of those peaks prevent us from resolving the minimal position of the CTR intensity, the absence of oscillations in the evolution of the CTR intensity as a function of $L$ also shows that we are not in the presence of a homogeneous layer of \ce{Pt_3O_4}, but rather of many islands of different height covering the substrate.
 
 We can divide our catalyst surface in three different components as a function of $\vec{z}$.
 First, there is bulk Pt (100) in which the structure is homogeneous.
@@ -219,13 +219,13 @@ A first approach to understanding the catalyst surface is presented below.
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/fit_8o2.pdf}
     \caption{
-        Fitting results for crystal truncation rods collected under a \qty{80}{\milli\bar} of \dioxygen.
+        Fitting results for crystal truncation rods collected under a \qty{80}{\milli\bar} of \ce{O_2}.
     }
     \label{fig:CTRFitHighOxygen}
 \end{figure}
 
 The structure factors $F_i$ resulting from the presence of one to 9 layers on the Pt (100) surface of \ce{Pt_3O_4} was simulated with \textit{ROD}.
-The fitting routine consists in minimizing the square root difference between the CTR structure factors $F_{obs}$ and the square root of the  coherent sum of the squared simulated structure factors by adjusting the weight $W_i$ of each signal in the total signal $F_{calc}$ (eq. \ref{eq:Fcalc}).
+The fitting routine consists in minimising the square root difference between the CTR structure factors $F_{obs}$ and the square root of the  coherent sum of the squared simulated structure factors by adjusting the weight $W_i$ of each signal in the total signal $F_{calc}$ (eq. \ref{eq:Fcalc}).
 
 \begin{equation}
     F_{calc} = \sqrt{\sum_{i=1}^{9} W_i F_i^2}
@@ -233,14 +233,14 @@ The fitting routine consists in minimizing the square root difference between th
 \end{equation}
 
 The relation between each weight was adjusted by following a Gaussian distribution, expecting the different islands to not differ too much in height.
-The result of the fitting routine are presented in fig. \ref{fig:CTRFitHighOxygen}, and show a Gaussian distribution centered around $3.6$ unit cells, with a standard deviation $\sigma$ equal to $1.3$ unit cells.
+The result of the fitting routine are presented in fig. \ref{fig:CTRFitHighOxygen}, and show a Gaussian distribution centred around $3.6$ unit cells, with a standard deviation $\sigma$ equal to $1.3$ unit cells.
 The position and width of the \ce{Pt_3O_4} peaks are well adjusted, especially for the CTR measured perpendicularly to ([H, K] = [4, 0]).
 The simulation struggles however to reproduce regions between Pt and \ce{Pt_3O_4} Bragg peaks where the signal seems to be more convoluted.
 There is a difference of a factor three when comparing the results with the average thickness of \qty{\approx 60}{\angstrom} given by fitting the $L$-scans in fig. \ref{fig:LScansHighOxygenPt100}, since each unit cell is expected to be \qty{\approx5.64}{\angstrom} thick.
 Overall, the existence of bulk \ce{Pt_3O_4} islands is confirmed.
 
 When observing the CTR intensity under other atmospheres, a clear evolution in the position of the minimum intensity between both reacting conditions (in red and green in fig. \ref{fig:CTRPt100}) is visible.
-The CTR recorded after exposition to reacting conditions under ammonia or under argon have similar intensities and are almost indistinguishables.
+The CTR recorded after exposition to reacting conditions under ammonia or under argon have similar intensities and are almost indistinguishable.
 
 All three CTR were fitted together using \textit{ROD} at each atmospheres besides the oxygen rich atmosphere, for which a surface model taking into account the existence of \ce{Pt_3O_4} islands as well as the relaxation of the topmosts platinum layers compatible with \textit{ROD} could not be derived.
 Different models were tested, adding the possibility of in-plane lattice displacement did not show any improvement of the fit quality, and a simple surface model was kept consisting of two Pt (100) layers, each sharing an out-of-plane lattice displacement parameter, on top of bulk Pt (100).
@@ -258,7 +258,7 @@ The fitting results are shown in fig. \ref{fig:CTRFit100}.
 The surface roughness evaluated \textit{via} the $\beta$ parameter in fig. \ref{fig:CTRFit100} (a) is consistent with the evolution of the CTR intensity in fig. \ref{fig:CTRPt100}.
 A high roughness is already present after the exposition of the surface to Argon.
 The average roughness after introducing a partial pressure of \qty{80}{\milli\bar} of oxygen in the cell could not be retrieved but seems to be at least equal to the roughness under Argon from observing the CTR signals.
-The roughness under reacting conditions is higher than under Argon, these crystal truncations rods having been measured after the second introduction of ammonia in the cell, \textit{i.e.} after cleaning of the sample and a short exposition to a high oxygen atmosphere.
+The roughness under reacting conditions is higher than under Argon, these crystal truncation rods having been measured after the second introduction of ammonia in the cell, \textit{i.e.} after cleaning of the sample and a short exposition to a high oxygen atmosphere.
 Lowering the amount of oxygen in the cell decreases the surface roughness, which stays at high values.
 The lowest value is reached when oxygen is not present in the reactor anymore.
 The presence of \qty{5}{\milli\bar} of oxygen after the ammonia oxidation cycle increases the surface roughness to higher values, almost equal to the maximum value under reacting conditions after the presence of \qty{80}{\milli\bar} of oxygen.
@@ -281,17 +281,12 @@ The lack of results under \qty{80}{\milli\bar} of oxygen without ammonia and the
 	 & NH3 & 0 & 0 & 1.1 & 1.1 & 1.1 & 0 & 0 \\
 	 & O2 & 0 & 8.8 & 8.8 & 0.55 & 0 & 0 & 0.55 \\
 	\midrule
-	\multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Peak position in N1s spectra (eV)\\ $E_{photon}$ = \qty{550}{\eV}\end{tabular}} & 403.56 & No peak & 404.32 & 404.32, 400.00 & 404.85, 400.60 & No peak & No peak \\
+	\multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Peak position in N1s spectra (eV)\\ $E_{photon}$ = \qty{700}{\eV}\end{tabular}} & 403.56 & No peak & 404.32 & 404.32, 400.00 & 404.85, 400.60 & No peak & No peak \\
 	\multicolumn{2}{l}{Corresponding surface moieties} &  &  & N, NH, NH2, NO ? & N, NH, NH2, NO ? & N, NH, NH2 ? &  &  \\
-	\midrule
-	\multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Peak position in N1s spectra (eV)\\ $E_{photon}$ = \qty{700}{\eV} \end{tabular}} & No peak & No peak & No peak & No peak & 404.3, 399.99 & 404.93, 400.61 & No peak \\
-	\multicolumn{2}{l}{Corresponding surface moieties} &  &  &  & N, NH, NH2, NO ? & N, NH, NH2, NO ? & N, NH, NH2 ? &  \\
 	\midrule
 	\multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Peak position in O1s spectra (eV)\\ $E_{photon}$ = \qty{700}{\eV} \end{tabular}} & No peak & 529.64 & 533.72, 529.64 & 534.28, 532.04 & 532.38 & 531.27, 529.62 &  \\
 	\multicolumn{2}{l}{Corresponding surface moieties} &  &  &  &  &  &  &  \\
-	\midrule
-	\multicolumn{2}{l}{\begin{tabular}[c]{@{}l@{}}Peak position in Pt4f spectra (eV)\\ Eph = 550 eV\end{tabular}} &  &  &  &  &  &  &  \\
-	\multicolumn{2}{l}{Corresponding surface moieties} &  &  &  &  &  &  &  \\ \bottomrule
+    \bottomrule
 	\end{tabular}%
 }
 \caption{}
@@ -303,7 +298,7 @@ The lack of results under \qty{80}{\milli\bar} of oxygen without ammonia and the
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/Pt100/O1sN1s_700.pdf}
     \caption{
         Spectra collected around the N1s edge (tabulated binding energy equal to \qty{409.9}{\eV}) under different atmospheres at \qty{450}{\degreeCelsius} with an incoming photon energy of \qty{700}{\eV}.
-        The spectra are normalized and shifted in intensity to highlight the presence of different peaks.
+        The spectra are normalised and shifted in intensity to highlight the presence of different peaks.
     }
     \label{fig:O1sN1sPt100}
 \end{figure}
