--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -1,6 +1,6 @@
 \section{Surface x-ray diffraction on a Pt (111) single crystal} \label{sec:SXRD111}
 
-Platinum crystallizes in a face-centered cubic structure with a lattice parameter $a_{Pt}$ equal to \qty{3.9242}{\angstrom} at room temperature.
+Platinum crystallises in a face-centred cubic structure with a lattice parameter $a_{Pt}$ equal to \qty{3.9242}{\angstrom} at room temperature.
 Its structure was first presented in sec. \ref{sec:ScatCrystal} to introduce the notions of crystals.
 
 The arrangement of the Pt atoms on the (111) surface is hexagonal, which leads to the definition of the surface unit cell shown in fig. \ref{fig:SurfaceUnitCellPt111} to be able to better represent the surface arrangement of the Pt atoms.
@@ -11,7 +11,7 @@ The out-of-plane vector $\vec{c}_{(111)}$ is perpendicular to the (111) plane, a
     \centering
     \includegraphics[trim=0 2cm 0 2cm, clip, width=0.70\textwidth]{/home/david/Documents/PhD/Figures/introduction/111.pdf}
     \caption{
-        Face-centered cubic unit cell of Pt with (111) crystallographic plane drawn in green.
+        Face-centred cubic unit cell of Pt with (111) crystallographic plane drawn in green.
         $\vec{a}_{(111)}$, $\vec{b}_{(111)}$ and $\vec{c}_{(111)}$ are the $(111)$ surface unit cell vectors.
         There are three (111) planes spanned by the magnitude of $\vec{c}_{(111)}$ (blue, red and green on the figure).
     }
@@ -22,7 +22,7 @@ The out-of-plane vector $\vec{c}_{(111)}$ is perpendicular to the (111) plane, a
 
 To be able to identify the presence of surface reconstructions and/or surface oxides, in-plane reciprocal space maps were collected at the atmospheres detailed in tab. \ref{tab:ConditionsSXRD} by rotating the in-plane sample and detector angles ($\omega$ and $\gamma$) from \ang{0} to \ang{120} to collect a third of the reciprocal space in the ($\vec{q}_x$, $\vec{q}_y$) plane, considering a hexagonal symmetry in the position of the Bragg peaks.
 
-The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space (fig. \ref{fig:MapsPt111A} and \ref{fig:MapsPt111B}) to visualize the arrangement of surface structures or surface relaxations in comparison with the hexagonal structure of the Pt atoms on the (111) surface, the $h$ and $k$ values being computed using the hexagonal surface unit cell described above.
+The reciprocal space map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space (fig. \ref{fig:MapsPt111A} and \ref{fig:MapsPt111B}) to visualise the arrangement of surface structures or surface relaxations in comparison with the hexagonal structure of the Pt atoms on the (111) surface, the $h$ and $k$ values being computed using the hexagonal surface unit cell described above.
 
 % The alignment of the sample was often lost during reciprocal space maps which prevented long continuous measurements, even under inert atmosphere (e.g. fig. \ref{fig:MapsPt111B} - \qty{500}{\milli\bar} of Argon).
 % The sample proved to be more stable after having lowered the pressure of oxygen in the reactor (fig. \ref{fig:MapsPt111B}).
@@ -48,7 +48,7 @@ The ($\bar{1}$$\bar{1}$0) and ($\bar{2}$10) Bragg peaks can be observed, togethe
 New peaks can first be observed under \qty{80}{\milli\bar} of oxygen, identified by different colour circles in fig. \ref{fig:MapsPt111A}, the corresponding interplanar spacings are given in tab. \ref{tab:InterplanarSpacingsPt111Oxygen}.
 The angle between the peaks circled in grey and white and the peaks circled in red and purple is equal to \ang{60}, which could be the signature of the existence of two hexagonal surface structures, each rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell and with a larger in-plane lattice parameter.
 No apparent second order peak can be linked to those rotated hexagonal structures.
-Summing the two vectors going from the center of the reciprocal space to the white and purple circled peaks yields the position of the black circled peak, the angle between both vectors is then equal to \ang{42.65}.
+Summing the two vectors going from the centre of the reciprocal space to the white and purple circled peaks yields the position of the black circled peak, the angle between both vectors is then equal to \ang{42.65}.
 
 The measurement of the entire reciprocal space map took about \qty{3}{\hour}\qty{35}{\minute}, the entire map being a concatenation of multiple $\omega$ scans during which the plane of the sample is rotated, the first scan starting near the center of the reciprocal space.
 The contribution of each scan in the reciprocal space map is visible from their different background.
@@ -58,7 +58,7 @@ A second map was measured in a smaller region of the reciprocal space \qty{9}{\h
 The measurement of this map took about \qty{1}{\hour}\qty{15}{\minute}.
 Three additional peaks (circled in black) appeared on a (8X8) coincidence with comparison to the hexagonal lattice of Pt (111), describing also a hexagonal lattice (drawn in black dotted lines) of lattice parameter equal to $|\vec{a_{hex}}| = \qty{3.118}{\angstrom}$.
 
-The grey circled peak seems to have disappeared from the reciprocal map, but an additionnal peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the center.
+The grey circled peak seems to have disappeared from the reciprocal map, but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the center.
 % [-101] and [1-10] eg ?
 From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8X8) hexagonal structure while measuring the large reciprocal space map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
 It is possible that the disappearance of the grey circle peak is linked to some alignment problems, visible from the large low intensity region in fig. \ref{fig:MapsPt111A}.
@@ -71,14 +71,14 @@ The background-subtracted scattered intensity was integrated as a function of $L
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/l_scans_high_oxygen.pdf}
     \caption{
-        In-plane map at $L=0$ (a-b-c) and out-of plane measurements for three different positions under \qty{80}{\milli\bar} of \dioxygen.
+        In-plane map at $L=0$ (a-b-c) and out-of plane measurements for three different positions under \qty{80}{\milli\bar} of \ce{O_2}.
     }
     \label{fig:LScans80}
 \end{figure}
 
 The integrated intensity perpendicular to ([H, K] = [-0.15, -0.74]) shows a small peak at $L\approx 0.2$ followed by a constant intensity, characteristic of non-periodic out-of-plane structures such as monolayers \parencite{Robinson1991}.
 
-Four different bulk platinum oxides have been reported to exist in litterature, $\alpha$-\ce{PtO_2}, $\beta$-\ce{PtO_2}, \ce{Pt_3O_4} and \ce{PtO}, the experimental structures are describes in tab. \ref{tab:PtOxides} together with the expected equilibrium structure found by Seriani et al \parencite*{Seriani2006, Seriani2008} from first-principles atomistic thermodynamics calculations and molecular dynamics simulations based on density functional theory.
+Four different bulk platinum oxides have been reported to exist in literature, $\alpha$-\ce{PtO_2}, $\beta$-\ce{PtO_2}, \ce{Pt_3O_4} and \ce{PtO}, the experimental structures are describes in tab. \ref{tab:PtOxides} together with the expected equilibrium structure found by Seriani et al \parencite*{Seriani2006, Seriani2008} from first-principles atomistic thermodynamics calculations and molecular dynamics simulations based on density functional theory.
 
 \begin{table}[!htb]
 \centering
@@ -105,7 +105,7 @@ Four different bulk platinum oxides have been reported to exist in litterature, 
 
 The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8X8) hexagonal structure shows that we are not in the presence of a bulk structure.
 However, Seriani et al. \parencite*{Seriani2006} have also found that the most stable surface oxide on the Pt (111) surface is expected to be hexagonal $\alpha$-\ce{PtO_2}.
-A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallization of the bulk oxide \parencite{MULLER1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{LI2005}.
+A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{MULLER1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{LI2005}.
 
 The formation of hexagonal on hexagonal surface $\alpha$-\ce{PtO_2} on Pt (111) is expected to induce a high amount of in-plane compressive strain in the oxide layer from the large difference between the Pt-Pt distance on the (111) surface (\qty{2.775}{\angstrom}) and the in-plane lattice parameter of $\alpha$-\ce{PtO_2} (\qty{3.14}{\angstrom}).
 A rotation of \ang{30} is expected to reduce the in-plane strain, resulting in a (2X2) arrangement.
@@ -137,14 +137,14 @@ The two $L$-scans performed in the current study were fitted using two Gaussian 
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/ctr_reconstructions_fitting_result.pdf}
     \caption{
-        Fit of out-of-plane measurements perpendicular to peaks observed in in-plane maps under \qty{80}{\milli\bar} of \dioxygen.
+        Fit of out-of-plane measurements perpendicular to peaks observed in in-plane maps under \qty{80}{\milli\bar} of \ce{O_2}.
     }
     \label{fig:LScans80Fit}
 \end{figure}
 
 We report a peak at [-0.89, 0, 0.65] but using the Pt (111) surface unit cell, with an out-of-plane lattice parameter equal to \qty{6.797}{\angstrom}, incompatible with the results presented in Ellinger et al \parencite*{Ellinger2008}.
 It seems that a different out-of-plane structure is present for the $\alpha$-\ce{PtO_2} surface oxide in this study.
-Additional simulations are needed to fully understand the structures present in this study, with different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunneling microscopy (STM) by \cite{VanSpronsen2017, Boden2022}, and the different surface oxides identified by Miller et al \parencite*{Miller2011, Miller2014}, Fantauzzi et al \parencite*{Fantauzzi2017}, as well as Farkas et al. \parencite*{FARKAS2017}, for some at similar temperature and oxygen partial pressures, respectively \qty{6.66}{\milli\bar} of \dioxygen at \qty{450}{\degreeCelsius} and \qty{1}{\milli\bar} of oxygen between \qty{160}{\degreeCelsius} and \qty{410}{\degreeCelsius}.
+Additional simulations are needed to fully understand the structures present in this study, with different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunnelling microscopy (STM) by \cite{VanSpronsen2017, Boden2022}, and the different surface oxides identified by Miller et al \parencite*{Miller2011, Miller2014}, Fantauzzi et al \parencite*{Fantauzzi2017}, as well as Farkas et al. \parencite*{FARKAS2017}, for some at similar temperature and oxygen partial pressures, respectively \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius} and \qty{1}{\milli\bar} of oxygen between \qty{160}{\degreeCelsius} and \qty{410}{\degreeCelsius}.
 \textcolor{Important}{which one...}
 
 \begin{figure}[!htb]
@@ -159,7 +159,7 @@ Additional simulations are needed to fully understand the structures present in 
 
 Reflectivity curves measured in a specular geometry and fitted using \textit{GenX} are presented in fig. \ref{fig:Reflecto80}.
 A simple model was used consisting of a slab of platinum on top of which is present a homogeneous layer.
-The density of the layer was set free during the minimization process between zero and \qty{0.021172}{FU\per\cubic\angstrom}, the value for $\alpha$-PtO$_2$.
+The density of the layer was set free during the minimisation process between zero and \qty{0.021172}{FU\per\cubic\angstrom}, the value for $\alpha$-PtO$_2$.
 The fitted density values is divided by two between the first (\qty{0.00727}{FU\per\cubic\angstrom}) and second (\qty{0.00358}{FU\per\cubic\angstrom}) measurement, and is always an order of magnitude below the expected value for a homogeneous layer of $\alpha$-PtO$_2$.
 The layer was found to be \qty{13.89}{\angstrom} and \qty{14.185}{\angstrom} thick in the first and second reflectivity curves, with a very low roughness (\qty{<1e-7}{\angstrom}).
 
@@ -174,7 +174,7 @@ By combining the information obtained from in-plane, out-of-plane and reflectivi
 %     \label{fig:PtO2OnPt111}
 % \end{figure}
 
-Ammonia was subsequently introduced in the reactor cell to investigate the evolution of the platinum oxide structures, as well as the presence of additionnal surface structures or surface reconstructions during the oxidation of ammonia on the platinum surface (fig. \ref{fig:MapsPt111B}).
+Ammonia was subsequently introduced in the reactor cell to investigate the evolution of the platinum oxide structures, as well as the presence of additional surface structures or surface reconstructions during the oxidation of ammonia on the platinum surface (fig. \ref{fig:MapsPt111B}).
 
 \begin{figure}[!htb]
     \centering
@@ -189,7 +189,7 @@ Ammonia was subsequently introduced in the reactor cell to investigate the evolu
 \end{figure}
 
 None of the previously observed peaks could be discerned anew, and no additional peaks emerged.
-Even when the oxygen pressure within the cell was reduced to \qty{5}{\milli\bar} (favoring alternate products) or eliminated at \qty{0}{\milli\bar}, there was no induction of surface reconstructions or surface structures.
+Even when the oxygen pressure within the cell was reduced to \qty{5}{\milli\bar} (favouring alternate products) or eliminated at \qty{0}{\milli\bar}, there was no induction of surface reconstructions or surface structures.
 All reciprocal space maps following the introduction of ammonia to a final atmosphere of \qty{500}{\milli\bar} of Argon showed a pristine surface structure, proving the oxidation cycle is reproducible and that ammonia effectively removed the different surface oxides that grew under \qty{80}{\milli\bar} of oxygen.
 
 \begin{figure}[!htb]
@@ -207,9 +207,9 @@ In accordance with the results of the in-plane reciprocal space maps in fig. \re
 The roughness of the [111]-oriented platinum crystal decreases following the introduction of ammonia after having increased to \qty{\approx 2.61}{\angstrom} when being exposed to \qty{80}{\milli\bar} of oxygen for more than \qty{20}{hours}, almost reaching its value before the start of the oxidation cycle.
 The largest decrease in roughness is seen during the reacting conditions.
 
-\subsection{Oxide growth monitored under \qty{5}{\milli\bar} of \dioxygen}
+\subsection{Oxide growth monitored under \qty{5}{\milli\bar} of \ce{O_2}}
 
-Following the complete ammonia oxidation cycle, the sample was put under \qty{5}{\milli\bar} of oxygen to see if any of the detected surface structures would come to grow again, and to decorrelate the effect of the simultaneous presence of ammonia and oxygen in the cell on the surface when favouring the production of nitrogen at lower oxygen pressures.
+Following the complete ammonia oxidation cycle, the sample was put under \qty{5}{\milli\bar} of oxygen to see if any of the detected surface structures would come to grow again, and to de-correlate the effect of the simultaneous presence of ammonia and oxygen in the cell on the surface when favouring the production of nitrogen at lower oxygen pressures.
 The sample was cleaned with two sputtering and annealing cycles before the introduction of oxygen.
 Large and small reciprocal space maps were measured to have the best compromise between a higher temporal resolution of the oxide growth, and the possibility to detect other peaks from corresponding surface unit cells.
 The larger reciprocal space maps are presented in fig. \ref{fig:LargeMapsPt111LowOxygen}.
@@ -223,13 +223,13 @@ The larger reciprocal space maps are presented in fig. \ref{fig:LargeMapsPt111Lo
     \label{fig:LargeMapsPt111LowOxygen}
 \end{figure}
 
-In the first map, that started directly after the stabilization of the oxygen pressure at \qty{5}{\milli\bar} in the reactor cell, three low intensity peaks can be detected that correspond to the same peaks detected previously shortly after having a pressure of \qty{80}{\milli\bar} in the cell (fig. \ref{fig:LargeMapsPt111LowOxygen}).
+In the first map, that started directly after the stabilisation of the oxygen pressure at \qty{5}{\milli\bar} in the reactor cell, three low intensity peaks can be detected that correspond to the same peaks detected previously shortly after having a pressure of \qty{80}{\milli\bar} in the cell (fig. \ref{fig:LargeMapsPt111LowOxygen}).
 Only the grey circled peak cannot be detected until \qty{4}{hours} of measurement, which is also when some peaks start to split in a similar pattern, exhibiting three distinct peaks around a more diffuse region.
-This splitting of the peaks could be the signature of a Pt (111) surface covered by different domains exhibiting similar hexagonal structures, slightly different from each other, while being themselved rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell with a higher magnitude of the in-plane lattice parameter, similarly to what has been observed under an oxygen pressure of \qty{80}{\milli\bar}.
+This splitting of the peaks could be the signature of a Pt (111) surface covered by different domains exhibiting similar hexagonal structures, slightly different from each other, while being themselves rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell with a higher magnitude of the in-plane lattice parameter, similarly to what has been observed under an oxygen pressure of \qty{80}{\milli\bar}.
 A peak can be observed at (-0.89, -0.89) in the only large reciprocal space map collected between \qty{41}{\minute} and \qty{4}{\hour}\qty{3}{\minute} after the start of the condition, at the same position as in the first large reciprocal space map measured under \qty{80}{\milli\bar} of oxygen.
 The peak position corresponds to the (-1, -1, 0)$_{\alpha-PtO_2}$ Bragg peak of bulk $\alpha-PtO_2$, but no peaks at (-0.89, 0, 0) and (0, -0.89, 0) positions can be detected (respectively (-1, 0, 0)$_{\alpha-PtO_2}$ and (0, -1, 0)$_{\alpha-PtO_2}$).
 The nature of the peak situated at (-0.89, -0.89) is not yet clear since it appears before the (-0.89, 0) and (0, -0.89) peaks, all three positions corresponding to the (8X8) hexagonal structure.
-As mentionned before, it is possible to draw a surface unit cell including this peak together with the white and purple circled peak, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.13}.
+As mentioned before, it is possible to draw a surface unit cell including this peak together with the white and purple circled peak, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.13}.
 
 The area sampled during the measurement was extended in the two last maps which allows us to observe more signals around the ($1\bar{1}0$) region.
 For each map, two peaks circled by the same colour draw two vectors of the same magnitude going through the center of the reciprocal space and separated by \ang{120}, in the last two maps there are three doublet of peaks separated by \ang{120}, in red, grey and purple ($q$-map available in appendix \ref{fig:2064QSpace}).
@@ -272,7 +272,7 @@ The peak intensity is constant as a function of $L$, similarly to the out-of-pla
 No $L$-scan was measured perpendicularly to the ($0\bar{1}$0)$_{\alpha-PtO_2}$ peak.
 
 Lowering the oxygen partial pressure in the reactor cell from \qtyrange{80}{5}{\milli\bar} has demonstrated that similar in-plane structures appear, but with a slower growth rate, which were both absent in the simultaneous presence of oxygen and ammonia in the reactor.
-Additionnal studies are needed understand if wether or not the rotated hexagonal structures act only as precursors to the appearance of surface $\alpha$-\ce{PtO_2}, or if those peaks are still present after an extended exposure to oxygen.
+Additional studies are needed understand if whether or not the rotated hexagonal structures act only as precursors to the appearance of surface $\alpha$-\ce{PtO_2}, or if those peaks are still present after an extended exposure to oxygen.
 
 % Finally, reflectivity curves were measured before the introduction of oxygen, as well as \qty{14}{\hour}\qty{30}{\minute} and \qty{23}{\hour}\qty{30}{\minute} after the introduction of oxygen, shown in fig. \ref{fig:reflecto}.
 % The curves were fitted with \textit{Genx} following the method described earlier.
@@ -304,7 +304,7 @@ Additionnal studies are needed understand if wether or not the rotated hexagonal
 Crystal truncation rods have been measured perpendicularly to the ($\bar{2}10$), ($\bar{1}00$) and ($\bar{1}\bar{1}0$) positions \qty{6}{\hour} after the start of each condition, each measurement lasted for \qty{2}{\hour}.
 The background-subtracted intensity of the CTR was integrated using the \textit{fitaid} module of \textit{binoculars} as a function of $L$ with the same integration range.
 
-The CTR intensity is presented in fig. \ref{fig:CTRPt111}, no additionnal peak could be detected at any condition, besides the Pt Bragg peaks at higher $L$ values.
+The CTR intensity is presented in fig. \ref{fig:CTRPt111}, no additional peak could be detected at any condition, besides the Pt Bragg peaks at higher $L$ values.
 At first sight, the roughness seems to evolve during the exposition to different atmospheres, visible from the increase and decrease of the  intensity minimum near $L=1.5$ (or $L=2.5$ for the CTR recorded perpendicular to the ($\bar{1}$00) Bragg peak).
 The intensity of the CTR under \qty{500}{\milli\bar} of argon before the oxidation cycle was progressively lost during the measurements due to problems with the sample heater, also visible in the reciprocal space map under the same condition in fig. \ref{fig:MapsPt111A}, and is therefore not shown in the data besides for the ($\bar{1}\bar{1}$0) Bragg peak.
 
@@ -314,7 +314,7 @@ The intensity of the CTR under \qty{500}{\milli\bar} of argon before the oxidati
     \includegraphics[trim=0 5cm 0 4.5cm, clip, width=0.45\textwidth]{/home/david/Documents/PhD/Figures/introduction/Pt111HexB.pdf}
     \caption{
         View from above (a) and from the side (b) of the Pt (111) surface with the atoms belonging to the A, B and C layers respectively coloured in green, red and blue.
-        The size of the Pt atoms has been tuned from (a) to (b) to be able to visualize the arrangement of the A, B and C layers.
+        The size of the Pt atoms has been tuned from (a) to (b) to be able to visualise the arrangement of the A, B and C layers.
     }
     \label{fig:Pt111StructureSideAndTop}
 \end{figure}
@@ -345,7 +345,7 @@ The roughness of the Pt (111) surface (fig. \ref{fig:CTRFit111} - a) increases w
 The introduction of oxygen in the cell further increases the surface roughness, as expected from the formation of the different surface oxides visible in the in-plane reciprocal space maps.
 Adding ammonia in the reactor cell, which was seen to remove the different surface oxides, has also the effect of decreasing the surface roughness.
 The surface roughness increases slightly again when oxygen is removed, but reaches a value of 0 when both gases are removed from the reactor, falling back to an inert atmosphere, with a lower surface roughness than at the beginning of the measurement (visible also in fig. \ref{fig:CTRPt111} and consistent with the reflectivity results inf fig. \ref{fig:ReflectoCycle}).
-It seems that the ammonia oxidation cycle has effectively \textit{cleaned} the surface from the presence of impuritied or surface oxides.
+It seems that the ammonia oxidation cycle has effectively \textit{cleaned} the surface from the presence of impurities or surface oxides.
 Finally, the re-introduction of \qty{5}{\milli\bar} of oxygen increases the surface roughness again, in accordance with the formation of surface oxides detected during with in-plane reciprocal space maps.
 
 Overall, a very low amount of strain is detected on the surface, almost imperceptible when observing position of the CTR minimum in fig. \ref{fig:CTRPt111}.
@@ -355,7 +355,7 @@ The largest evolution in the strain values comes from the high oxygen atmosphere
 The formation of surface oxides observed under this atmosphere does not seem to have a very important effect on the surface relaxation state.
 The introduction of ammonia increases again the surface strain, higher ammonia to oxygen ratio coincide with higher tensile strain.
 
-Since the reacting conditions and the sole presence of ammonia have had the effect of removing the different surface oxides present on the platinum surface, as well as decresing the roughness quantified \textit{via} reflectivity measurements and the evolution of the $\beta$ parameter in fig. \ref{fig:CTRFit111} (a), it is possible that the tensile strain in the last layer under Argon after the oxidation cycle corresponds to the equilibrium state of a clean Pt (111) surface.
+Since the reacting conditions and the sole presence of ammonia have had the effect of removing the different surface oxides present on the platinum surface, as well as decreasing the roughness quantified \textit{via} reflectivity measurements and the evolution of the $\beta$ parameter in fig. \ref{fig:CTRFit111} (a), it is possible that the tensile strain in the last layer under Argon after the oxidation cycle corresponds to the equilibrium state of a clean Pt (111) surface.
 
 Finally, the re-introduction of \qty{5}{\milli\bar} of oxygen decreases slightly the tensile strain on the topmost layer, a weaker but similar effect to the presence of \qty{80}{\milli\bar} of oxygen.
 To conclude, no changes from tensile to compressive strain are observed during the reaction, the presence of oxygen alone in the reactor cell during which the growth of surface oxides has been monitored has the effect of lowering the surface strain, while the presence of ammonia has the opposite effect.
@@ -366,7 +366,7 @@ Different reacting conditions are related to the same direction of displacement 
 In order to relate surface structure, surface moieties and reaction products, the Pt4f, N1s and O1s XPS spectra were recorded at ambient pressure at the B07 beamline.
 The same order in the ammonia oxidation cycle was repeated as during the SXRD experiment.
 
-To be able to qualitatively compare the evolution of the peak intensity, the intensity of the detected electron beam was normalized using the pre-edge intensity, the average intensity depending on the total pressure in the reaction chamber \parencite{Willmott} that changed during the experiment.
+To be able to qualitatively compare the evolution of the peak intensity, the intensity of the detected electron beam was normalised using the pre-edge intensity, the average intensity depending on the total pressure in the reaction chamber \parencite{Willmott} that changed during the experiment.
 The evolution of the collected XPS intensity as a function of the photoelectron binding energy is presented in fig. \ref{fig:O1sN1sPt111} around the N1s and O1s edges for different atmospheres, the position of the indexed peaks are grouped in tab. \ref{tab:XPSPt111}.
 
 \begin{figure}[!htb]
@@ -374,7 +374,7 @@ The evolution of the collected XPS intensity as a function of the photoelectron 
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/Pt111/O1sN1s_700.pdf}
     \caption{
         Spectra collected around the N1s edge (tabulated binding energy equal to \qty{409.9}{\eV}) and O1s edge (tabulated binding energy equal to \qty{409.9}{\eV}) under different atmospheres at \qty{450}{\degreeCelsius} with an incoming photon energy of \qty{700}{\eV}.
-        The spectra are normalized and shifted in intensity to highlight the presence of different peaks.
+        The spectra are normalised and shifted in intensity to highlight the presence of different peaks.
     }
     \label{fig:O1sN1sPt111}
 \end{figure}
@@ -410,7 +410,7 @@ Considering the gases present in the reactor cell, the expected species are NH2,
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/B07_2022_04_XPS/Figures/Pt111/Pt4f_550_no_fit.pdf}
     \caption{
         Spectra collected around the Pt4f edge doublet (tabulated binding energy equal to \qty{74.5}{\eV} and \qty{71.2}{\eV}) under different atmospheres at \qty{450}{\degreeCelsius} with an incoming photon energy of \qty{550}{\eV}.
-        A Shirley-type background has been subtracted from all XP spectra, that have then been normalised by the pre-edge intensity.
+        A Shirley-type background has been subtracted from all XPS spectra, that have then been normalised by the pre-edge intensity.
     }
     \label{fig:Pt4fPt111}
 \end{figure}
@@ -423,4 +423,4 @@ pressure ranges we intend to study, as well as the presence of surface oxides de
 
 
 
-\cite{Miller2011} have measured both O1s and Pt4f edges at under \qty{6.66}{\milli\bar} of \dioxygen at \qty{450}{\degreeCelsius}, and under \qty{0.66}{\milli\bar} of \dioxygen at \qty{350}{\degreeCelsius}.
+\cite{Miller2011} have measured both O1s and Pt4f edges at under \qty{6.66}{\milli\bar} of \ce{O_2} at \qty{450}{\degreeCelsius}, and under \qty{0.66}{\milli\bar} of \ce{O_2} at \qty{350}{\degreeCelsius}.
